--- a/localisation/braz_por/MD_focus_ABK_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_ABK_l_braz_por.yml
@@ -97,12 +97,12 @@
  ABK_one_party_desc: "Nosso país não precisa de dezenas de partidos diferentes, um é suficiente para nós"
  ABK_china_invest_tech: "A China está Investindo em Nosso Setor de Tecnologia"
  ABK_china_invest_tech_desc: "As empresas chinesas estão prontas para financiar nosso setor técnico"
- ABK_defend_our_home: "Vamos Proteger Nossa Casa!"
+ ABK_defend_our_home: "Protegendo nossa casa"
  ABK_defend_our_home_desc: "Nosso país está sempre sob ameaça de perigo - vamos protegê-lo"
  ABK_defend_our_home2: "Estruturas de Defesa"
- ABK_defend_our_home2_desc: "É necessário não apenas inspirar o povo, mas também estar fisicamente pronto para a defesa."
+ ABK_defend_our_home2_desc: "É necessário não só inspirar o povo, mas também estar fisicamente preparado para defender as nossas fronteiras."
  ABK_china_invest_mesta: "Investimento Chinês Continua"
- ABK_china_invest_mesta_desc: "As empresas chinesas viram uma resposta positiva dos investimentos anteriores e estão prontas para continuar no mesmo espírito"
+ ABK_china_invest_mesta_desc: "As empresas chinesas obtiveram um resultado positivo de investimentos anteriores e estão prontas para continuar com o mesmo espírito"
  ABK_atheism: "Ateísmo em Cada Lar"
  ABK_atheism_desc: "A propaganda de Marx levará nosso povo de volta ao glorioso caminho do ateísmo!"
  ABK_mil_prop: "Propaganda Militar"
@@ -116,7 +116,7 @@
  ABK_fiveka: "O Primeiro Plano Quinquenal"
  ABK_fiveka_desc: "É hora de retornarmos à prática dos planos quinquenais"
  ABK_free_education: "Educação Gratuita"
- ABK_free_education_desc: "Todo abasgo deve ser educado!"
+ ABK_free_education_desc: "Todo Abkhaz deve ser educado, independentemente de onde esteja!"
  ABK_collectivism: "Coletivismo"
  ABK_collectivism_desc: "Vamos devolver a unidade aos abasgos através do coletivismo"
  ABK_sup_work: "Nós Apoiaremos os Trabalhadores"
@@ -163,7 +163,7 @@
  ABK_abkhazvozvrashenstroy_desc: "Este fundo será fundamental na nova economia da Abcásia; com sua ajuda, seremos capazes de atrair investimentos para nosso país de todo o mundo"
  ABK_parli_dead: "Lidar com o Parlamento"
  ABK_parli_dead_desc: "É hora de eliminar essa relíquia da democracia"
- ABK_dictatorship: "Eu Sou um Ditador Monarca"
+ ABK_dictatorship: "O monarca ditatorial"
  ABK_dictatorship_desc: "Apenas a mão forte do monarca salvará nosso país"
  ABK_sov_heast: "Amizade com a Rússia"
  ABK_sov_heast_desc: "Estamos prontos para ser amigos de uma Rússia assim"
