--- a/localisation/braz_por/MD_focus_SOV_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SOV_l_braz_por.yml
@@ -4740,12 +4740,12 @@
  SOV_KHM_separ_tt: "§RSeparatism§! in §Y[KHM.GetNameWithFlag]§!: §Y[?KHM.subjectinped]§!%"
  SOV_YAM_separ_tt: "§RSeparatism§! in §Y[YAM.GetNameWithFlag]§!: §Y[?YAM.subjectinped]§!%"
  SUB_separ_tt: "§YSubject§! will §Rrefuse§! to obey the federal government"
- SUB_campaign_prepare_tt: "Make sure your §Ysubjects§! have brigades of soldiers"
+ SUB_campaign_prepare_tt: "Certifique-se de seus §Yassuntos§! tem brigadas de soldados"
  SUB_separ_caucas_tt: "[SOV_CHE_separat]\n[SOV_KBK_separat]\n[SOV_ING_separat]\n[SOV_ADY_separat]\n[SOV_DAG_separat]\n[SOV_KCC_separat]\n"
- SUB_separ_caucas_output: "§YCaucasus§!"
+ SUB_separ_caucas_output: "§YCáucaso§!"
  SUB_separ_povoljie_tt: "[SOV_TAT_separat]\n[SOV_BSH_separat]\n[SOV_CHU_separat]\n[SOV_MEL_separat]\n[SOV_MOV_separat]\n[SOV_UDM_separat]\n"
- SUB_separ_povoljie_output: "§YVolga area§!"
+ SUB_separ_povoljie_output: "§YÁrea do Volga§!"
  SUB_separ_siberia_tt: "[SOV_TUV_separat]\n[SOV_YAK_separat]\n[SOV_BRY_separat]\n[SOV_KOM_separat]\n[SOV_KHS_separat]\n[SOV_NEE_separat]\n[SOV_ALT_separat]\n[SOV_YAM_separat]\n[SOV_KHM_separat]\n"
- SUB_separ_siberia_output: "§YSiberia§!"
+ SUB_separ_siberia_output: "§YSibéria§!"
  SUB_separ_other_tt: "[SOV_KAE_separat]\n[SOV_KLM_separat]\n"
- SUB_separ_other_output: "§YOther regions§!"
+ SUB_separ_other_output: "§YOutras regiões§!"
