--- a/localisation/braz_por/MD_traits_l_braz_por.yml
+++ b/localisation/braz_por/MD_traits_l_braz_por.yml
@@ -236,10 +236,8 @@
  Cat_SAM_research: "Velocidade de Pesquisa de Mísseis Terra-Ar"
  Cat_ABM_research: "Velocidade de Pesquisa de Mísseis Antibalísticos"
  Cat_space_research: "Velocidade de Pesquisa de Todas as Tecnologias Espaciais"
- Cat_satellite_research: "Velocidade de Pesquisa de Satélites"
  Cat_GNSS_research: "Velocidade de Pesquisa de Satélites GNSS"
  Cat_conventional_warhead_research: "Velocidade de Pesquisa de Cabeças de Guerra Convencionais"
- Cat_nuclear_weapons_research: "Velocidade de Pesquisa de Armas Nucleares"
  CAT_avionics_research: "Velocidade de Pesquisa de Aviônicos Aéreos"
  CAT_drones_research: "Velocidade de Pesquisa de Drones Aéreos"
  CAT_wings_research: "Velocidade de Pesquisa de Asas de Aeronaves"
@@ -478,4 +476,6 @@
  air_force_spirit: "Espírito da Força Aérea"
  air_force_command_spirit: "Espírito do Comando da Força Aérea"
  CAT_genes_research: "Velocidade de pesquisa em engenharia genética"
- Cat_nuclear_reactors_research: "Velocidade de pesquisa de reatores nucleares"
+ CAT_satellite_research: "Velocidade de pesquisa de satélites"
+ CAT_nuclear_weapons_research: "Velocidade de pesquisa de armas nucleares"
+ CAT_nuclear_reactors_research: "Velocidade de pesquisa de reatores nucleares"
