--- a/localisation/french/MD_focus_BOT_l_french.yml
+++ b/localisation/french/MD_focus_BOT_l_french.yml
@@ -305,63 +305,63 @@
  BOT_wind_turbine_research: "Recherche sur les éoliennes"
  BOT_wind_turbine_research_desc: "Avec la technologie actuelle, la création de parcs éoliens au Botswana est impossible. Les conditions de vent ne sont tout simplement pas adaptées aux turbines contemporaines. Nous devons investir dans la recherche de solutions à ce problème."
  BOT_ethanol_power_plant: "Centrale électrique à l'éthanol"
- BOT_ethanol_power_plant_desc: "Using ethanol derived from cow manure, we can create a sustainable way of generating electricity"
- BOT_botswana_steelworks: "Botswana Steelworks"
- BOT_botswana_steelworks_desc: "We need to dig more coal! With all the extra coal, we can also setup a steel factory"
- BOT_tuli_wind_park: "Tuli Wind Park"
- BOT_tuli_wind_park_desc: "The Northern Tuli Game Reserve is a natural park in the Eastern corner of Botswana. The terrain near the park is suitable for setting up wind farms, and that is where we will set up Botswana's first wind park"
- BOT_coal_powered_nation: "Coal Powered Nation"
- BOT_coal_powered_nation_desc: "With coal becoming a competing resource for diamonds, a new economic power is taking hold of Botswana. The Tswana Coal corporation is a far more valuable to the Botswanan government than Debswana ever was"
- BOT_debswana_on_top: "Debswana Remains Dominant"
- BOT_debswana_on_top_desc: "Even though we have expanded our renewable sector, most new power stations are ran by various smaller companies. Debswana, the main diamond producer, has remained along with their diamonds one of the key players of Botswanan economics"
- BOT_political_effort: "Political Effort"
- BOT_political_effort_desc: "Botswanan politics is dominated by the ruling BDP party. At such, there is very little opposition in governing the country"
- BOT_assert_independence: "Assert Independence"
- BOT_assert_independence_desc: "As a small country (both in population and land area), we are susceptible to foreign influence. We need to prove to the world that we have the capacity to chart our own course"
- BOT_found_indian_embassy: "Found Embassy in India"
- BOT_found_indian_embassy_desc: "India has had an embassy in Gaborone since 1987. However, we are yet to found one in India. We need to return the favour and open one in New Delhi"
- BOT_indian_diamond_institute: "India-Africa Diamond Institute"
- BOT_indian_diamond_institute_desc: "The Indian Diamond Institute has contacted our government to setup a new India-Africa Diamond Institute in Botswana. The Institute will be staffed by Indians, and they will teach diamond cutting, polishing, grading and jewellery making. This will improve our ability to produce diamonds"
- BOT_us_relations: "Approach the US"
- BOT_us_relations_desc: "The United States has long been an ally of Botswana, and they have given us large amounts of developmental aid in the past"
- BOT_found_ilea: "Found ILEA"
- BOT_found_ilea_desc: "The US wants to establish an International Law Enforcement Academy in Gaborone. The Academy would provide police training to the entire Sub-Saharan Africa"
- BOT_saf_relations: "Cooperation with South Africa"
- BOT_saf_relations_desc: "Botswana has had diplomatic relations with South Africa since 1994, ever since the end of the apartheid regime. Both countries have been part of the South African Customs Union since 1910 and both share history of being part of the British Commonwealth"
- BOT_security_against_zimbabwe: "Security Against Zimbabwe"
- BOT_security_against_zimbabwe_desc: "The unstability in Zimbabwe is a threat to both Botswana and South Africa. We need to find a solution to the problem"
- BOT_three_digkosi_nko: "Employ Mansudae Overseas Project"
- BOT_three_digkosi_nko_desc: "The government is planning to build a statue to commemorate the three digkosi who convinced the British to separate Bechuanaland into its own entity from South Africa. We should employ the North Korean Mansudae Overseas Projects company to build the statue, as they are a veteran of construction projects in Africa"
- BOT_three_digkosi_domestic: "Build a Statue Domestically"
- BOT_three_digkosi_domestic_desc: "The government is planning to build a statue to commemorate the three digkosi who convinced the British to separate Bechuanaland into its own entity from South Africa. We should employ a local Botswanan company to construct the statue"
- BOT_condemn_north_korea: "Condemn North Korea"
- BOT_condemn_north_korea_desc: "North Korea's human rights abuses are unacceptable. We need to cut all diplomatic ties with them. This will make Botswana the first country in Africa that only recognises one true Korean state on the peninsula, the Republic of Korea"
- BOT_deepen_cooperation_with_nko: "Deepen Cooperation with North Korea"
- BOT_deepen_cooperation_with_nko_desc: "We should aim to create deeper economic and diplomatic ties between North Korea and Botswana"
- BOT_extra_funding_to_schools: "Provide Schools with Extra Funding"
- BOT_extra_funding_to_schools_desc: "Education is the corner stone of a well working society. We can't skip out on educating our young people"
- BOT_introduce_school_fees: "Re-Introduce School Fees"
- BOT_introduce_school_fees_desc: "Botswana has provided a completely free education since the 1980s. However, our education expenses are constantly rising. We need to re-introduce school fees to bridge the gap. It won't be popular, but it is necessary"
- BOT_expand_nature_reserves: "Expand Game Reserves"
- BOT_expand_nature_reserves_desc: "We need to expand the national game reserves to better protect the wildlife"
- BOT_shrink_nature_reserves: "Shrink Game Reserves"
- BOT_shrink_nature_reserves_desc: "Considering that 20% of Botswana is designated as a national park, we might have overdone our wildlife protection policies. We need to take some of that land back to areas we can develop"
- BOT_remove_death_penalty: "Remove the Death Penalty"
- BOT_remove_death_penalty_desc: "Botswana is one of the few countries in Africa that still has a death penalty. There is roughly one execution per year (usually from aggravated murder) and sentences are often carrier out by hanging. This is an inhumane practice and it should be stopped"
- BOT_keep_death_penalty: "Keep the Death Penalty"
- BOT_keep_death_penalty_desc: "Botswana is one of the few countries in Africa that still has a death penalty. There is roughly one execution per year (usually from aggravated murder) and sentences are often carrier out by hanging. We can't give any quarter to criminals or murderers, otherwise society falls apart. The death penalty is here to stay"
- BOT_prioritise_industrial_courts: "Prioritise Industrial Courts"
- BOT_prioritise_industrial_courts_desc: "The Industrial Courts are a part of the Botswanan justice system that handle all trade and industrial related disputes. We need to emphasize their importance in having a well running economy"
- BOT_secure_workers_rights: "Secure Workers Rights"
- BOT_secure_workers_rights_desc: "The mining and energy corporations are taking an advantage of our people by having them work in horrible conditions. We need to encourage labour unions and better work contracts for our people"
- BOT_anti_poaching_decisions: "Poaching in the Kalahari"
+ BOT_ethanol_power_plant_desc: "En utilisant l'éthanol dérivé du fumier de vache, nous pouvons créer un moyen durable de produire de l'électricité."
+ BOT_botswana_steelworks: "Aciérie du Botswana"
+ BOT_botswana_steelworks_desc: "Nous devons extraire plus de charbon ! Avec tout le charbon supplémentaire, nous pouvons aussi installer une usine d'acier."
+ BOT_tuli_wind_park: "Parc éolien de Tuli"
+ BOT_tuli_wind_park_desc: "La réserve de chasse de Tuli Nord est un parc naturel situé dans l'est du Botswana. Le terrain à proximité du parc est propice à l'installation de parcs éoliens, et c'est là que nous installerons le premier parc éolien du Botswana."
+ BOT_coal_powered_nation: "nation alimentée au charbon"
+ BOT_coal_powered_nation_desc: "Le charbon devenant une ressource concurrente des diamants, une nouvelle puissance économique s'empare du Botswana. La Tswana Coal Corporation a beaucoup plus de valeur pour le gouvernement botswanais que Debswana ne l'a jamais eu."
+ BOT_debswana_on_top: "Le Debswana reste dominant"
+ BOT_debswana_on_top_desc: "Même si nous avons développé notre secteur des énergies renouvelables, la plupart des nouvelles centrales électriques sont gérées par diverses petites entreprises. Debswana, le principal producteur de diamants, est resté, avec ses diamants, l'un des principaux acteurs de l'économie botswanaise."
+ BOT_political_effort: "Effort Politiques"
+ BOT_political_effort_desc: "La politique botswanaise est dominée par le parti au pouvoir, le BDP. Il y a donc très peu d'opposition dans le gouvernement du pays."
+ BOT_assert_independence: "Affirmer son indépendance"
+ BOT_assert_independence_desc: "En tant que petit pays (tant en termes de population que de superficie), nous sommes sensibles aux influences étrangères. Nous devons prouver au monde que nous avons la capacité de tracer notre propre voie."
+ BOT_found_indian_embassy: "Fonder une ambassade en Inde"
+ BOT_found_indian_embassy_desc: "L'Inde a une ambassade à Gaborone depuis 1987. Cependant, nous n'en avons pas encore trouvé une en Inde. Nous devons rendre la pareille et en ouvrir une à New Delhi."
+ BOT_indian_diamond_institute: "Institut du diamant Inde-Afrique"
+ BOT_indian_diamond_institute_desc: "L'Indian Diamond Institute a contacté notre gouvernement pour créer un nouvel institut du diamant Inde-Afrique au Botswana. Le personnel de l'institut sera composé d'Indiens, qui enseigneront la taille, le polissage et le classement des diamants, ainsi que la fabrication de bijoux. Cela améliorera notre capacité à produire des diamants."
+ BOT_us_relations: "Se rapprocher des États-Unis"
+ BOT_us_relations_desc: "Les États-Unis sont depuis longtemps un allié du Botswana, et ils nous ont donné de grandes quantités d'aides au développement par le passé."
+ BOT_found_ilea: "Financer l'AIMO"
+ BOT_found_ilea_desc: "Les États-Unis souhaitent créer une académie internationale de maintien de l'ordre à Gaborone. L'académie offrirait une formation policière à l'ensemble de l'Afrique subsaharienne."
+ BOT_saf_relations: "Coopération avec l'Afrique du Sud"
+ BOT_saf_relations_desc: "Le Botswana entretient des relations diplomatiques avec l'Afrique du Sud depuis 1994, soit depuis la fin du régime de l'apartheid. Les deux pays font partie de l'Union douanière sud-africaine depuis 1910 et ont en commun d'avoir fait partie du Commonwealth britannique."
+ BOT_security_against_zimbabwe: "Sécurité contre le Zimbabwe"
+ BOT_security_against_zimbabwe_desc: "L'instabilité au Zimbabwe est une menace pour le Botswana et l'Afrique du Sud. Nous devons trouver une solution au problème"
+ BOT_three_digkosi_nko: "Employer le projet outre-mer de Mansudae"
+ BOT_three_digkosi_nko_desc: "Le gouvernement envisage de construire une statue à la mémoire des trois digkosi qui ont convaincu les Britanniques de séparer le Bechuanaland de l'Afrique du Sud pour en faire une entité distincte. Nous devrions faire appel à la société nord-coréenne Mansudae Overseas Projects pour construire la statue, car elle a l'habitude des projets de construction en Afrique."
+ BOT_three_digkosi_domestic: "Construire une statue à l'intérieur du pays"
+ BOT_three_digkosi_domestic_desc: "Le gouvernement envisage de construire une statue à la mémoire des trois digkosi qui ont convaincu les Britanniques de séparer le Bechuanaland de l'Afrique du Sud pour en faire une entité distincte. Nous devrions employer une entreprise locale botswanaise pour construire la statue."
+ BOT_condemn_north_korea: "Condamner la Corée du Nord"
+ BOT_condemn_north_korea_desc: "Les violations des droits de l'Homme en Corée du Nord sont inacceptables. Nous devons couper tous les liens diplomatiques avec eux. Le Botswana deviendra ainsi le premier pays d'Afrique à ne reconnaître qu'un seul véritable État coréen sur la péninsule, la République de Corée."
+ BOT_deepen_cooperation_with_nko: "Approfondir la coopération avec la Corée du Nord"
+ BOT_deepen_cooperation_with_nko_desc: "Nous devons viser à créer des liens économiques et diplomatiques plus profonds entre la Corée du Nord et le Botswana."
+ BOT_extra_funding_to_schools: "Fournir aux écoles un financement supplémentaire"
+ BOT_extra_funding_to_schools_desc: "L'éducation est la pierre angulaire d'une société qui fonctionne bien. Nous ne pouvons pas faire l'impasse sur l'éducation de nos jeunes."
+ BOT_introduce_school_fees: "Réintroduire les frais de scolarité"
+ BOT_introduce_school_fees_desc: "Le Botswana offre un enseignement totalement gratuit depuis les années 1980. Cependant, nos dépenses d'éducation sont en constante augmentation. Nous devons réintroduire des frais de scolarité pour combler le fossé. Ce ne sera pas populaire, mais c'est nécessaire."
+ BOT_expand_nature_reserves: "Développer les réserves de chasse"
+ BOT_expand_nature_reserves_desc: "Nous devons étendre les réserves nationales de gibier pour mieux protéger la vie sauvage."
+ BOT_shrink_nature_reserves: "Réduire les réserves de chasse"
+ BOT_shrink_nature_reserves_desc: "Si l'on considère que 20% du Botswana est désigné comme un parc national, nous avons peut-être exagéré nos politiques de protection de la faune. Nous devons récupérer une partie de ces terres dans des zones que nous pouvons développer."
+ BOT_remove_death_penalty: "Supprimer la peine de mort"
+ BOT_remove_death_penalty_desc: "Le Botswana est l'un des rares pays d'Afrique qui applique encore la peine de mort. Il y a environ une exécution par an (généralement pour meurtre aggravé) et les peines sont souvent exécutées par pendaison. Il s'agit d'une pratique inhumaine qui doit cesser."
+ BOT_keep_death_penalty: "Maintenir la peine de mort"
+ BOT_keep_death_penalty_desc: "Le Botswana est l'un des rares pays d'Afrique qui applique encore la peine de mort. Il y a environ une exécution par an (généralement pour meurtre aggravé) et les peines sont souvent exécutées par pendaison. On ne peut pas donner de quartier aux criminels ou aux meurtriers, sinon la société s'effondre. La peine de mort est là pour rester"
+ BOT_prioritise_industrial_courts: "Donner la priorité aux tribunaux industriels"
+ BOT_prioritise_industrial_courts_desc: "Les tribunaux industriels font partie du système judiciaire botswanais et traitent tous les litiges commerciaux et industriels. Nous devons souligner leur importance pour le bon fonctionnement de l'économie."
+ BOT_secure_workers_rights: "Garantir les droits des travailleurs"
+ BOT_secure_workers_rights_desc: "Les sociétés minières et énergétiques profitent de notre peuple en le faisant travailler dans des conditions horribles. Nous devons encourager les syndicats et de meilleurs contrats de travail pour notre peuple."
+ BOT_anti_poaching_decisions: "Braconnage dans le Kalahari"
  BOT_anti_poaching_decisions_desc: "Poaching is a serious issue in Botswana. Animals such as rhinos and elephants are shot for their horns and tusks, and shipped to Asian markets to serve in traditional medicine. Some animals are simply shot for sport by rich individuals with enough money. Most §Ypoachers§! come from neighbouring Namibia and Zambia, though many Botswana take part in it too. Botswana has had a hard stance on §Ypoachers§! for decades, and it is not uncommon that §Ypoachers§! get outright shot whenever spotted.\n\nPoaching (and other policies) are a contributing factor for the continued desertification of the Kalahari. Combating poaching is a key factor in protecting wildlife.\n\nLikelihood of §YDesertification§!: §R[?kalahari_expands]%§!\nLikelihood of §YStabilisation§!: [?kalahari_steady]%\nLikelihood of §YOasification§!: §G[?kalahari_retreats]%§!\n\nEvery month, there is a\n§Y[?chance_to_not_kill_poachers]%§! chance of §Y15 new poachers§! starting operations.\n§Y[?chance_to_kill_poachers]%§! chance of our security forces eliminating §Y[?no_of_poachers_to_kill] poachers§!\n\nWe can increase the likelihood of eliminating poachers by having a higher §YInternal Security§! spending or by boosting our forces with additional equipment or men.\n\nCurrent estimated amount of poachers: [?no_of_poachers] ([BOT_threat_level_of_poachers])"
- BOT_bi_yearly_poaching_report: "Yearly Poaching Report"
+ BOT_bi_yearly_poaching_report: "Rapport annuel sur le braconnage"
  BOT_bi_yearly_poaching_report_desc: "Every 12 months the impact of poaching to our nation will be estimated. A §GLow Threat§! will make the likelihood of §YDesertification§! go down, and a §RHigh Threat§! will make the likelihood of §YDesertification§! go up."
  BOT_anti_poaching_extra_security: "Hire Extra Security"
  BOT_anti_poaching_extra_security_desc: "We can allocate extra funds to hire some additional security personnel to combat poaching"
  BOT_anti_poaching_extra_security_tt: "§GThe chances of a eliminating poachers increases by 10%§!"
- BOT_anti_poaching_heavy_weapons: "Provide Heavy Weapons"
+ BOT_anti_poaching_heavy_weapons: "Fournir des armes lourdes"
  BOT_anti_poaching_heavy_weapons_desc: "By providing our security forces with heavy weapons and additional equipment, we can improve our effectiveness against poachers"
  BOT_anti_poaching_heavy_weapons_tt: "§GThe number of poachers eliminated increases by 5§!"
  BOT_anti_poaching_dehorn_rhinos: "Rhino Dehorning Campaign"
