--- a/localisation/french/MD_focus_LBA_l_french.yml
+++ b/localisation/french/MD_focus_LBA_l_french.yml
@@ -1,10 +1,10 @@
 ﻿l_french:
- libya_oil_nationalisation: "Oil Nationalisation"
- libya_oil_nationalisation_desc: "Libya has Africa's largest and the world's 10th largest oil reserves. Libya's oil industry is so important that it makes up 95% of all industries in the country. Oil reserves of Libya are an attractive investment target as production costs are low, the oil has low sulphur content and Libya is very close to the European market. However, as a result of sanctions, issues with foreign oil companies and tight state hold on the oil fields, Libya has reached a state where it barely has the resources to maintain its existing production. Any further increase in oil production would require considerable investment, either from abroad or from home.\n\nCurrent Level of Nationalisation: §Y[?lba_oil_nationalisation|%0]§!"
- libya_nationalise_oil_fields: "Nationalise Oil Fields"
- libya_nationalise_oil_fields_desc: "We can nationalise some of the privately run oil fields in Libya. This will cost us quite a lot of money, but it will make our oil production more independent"
- libya_sell_oil_fields: "Sell National Oil Fields"
- libya_sell_oil_fields_desc: "We can sell some of the oil fields run by the National Oil Corporation to foreign companies. We can make a quick buck but it will make our energy sector more reliant on other countries"
+ libya_oil_nationalisation: "Nationalisation du pétrole"
+ libya_oil_nationalisation_desc: "La Libye possède les plus grandes réserves de pétrole d'Afrique et les 10ème plus grandes réserves de pétrole du monde. L'industrie pétrolière libyenne est si importante qu'elle représente 95 % de toutes les industries du pays. Les réserves pétrolières de la Libye constituent une cible d'investissement intéressante car les coûts de production sont faibles, le pétrole a une faible teneur en soufre et la Libye est très proche du marché européen. Cependant, en raison des sanctions, des problèmes avec les compagnies pétrolières étrangères et du contrôle strict de l’État sur les champs pétroliers, la Libye a atteint un état où elle a à peine les ressources nécessaires pour maintenir sa production actuelle. Toute augmentation supplémentaire de la production pétrolière nécessiterait des investissements considérables, soit de l’étranger, soit du pays.\n\nNiveau actuel de nationalisation :§Y[?lba_oil_nationalisation|%0]§!"
+ libya_nationalise_oil_fields: "Nationaliser les champs de pétrole"
+ libya_nationalise_oil_fields_desc: "Nous pouvons nationaliser certains des gisements pétroliers privés en Libye. Cela nous coûtera beaucoup d’argent, mais cela rendra notre production pétrolière plus indépendante."
+ libya_sell_oil_fields: "Vendre les champs pétrolifères nationaux"
+ libya_sell_oil_fields_desc: "Nous pouvons vendre une partie des champs pétroliers gérés par la National Oil Corporation à des sociétés étrangères. Nous pouvons gagner rapidement de l’argent, mais cela rendra notre secteur énergétique plus dépendant des autres pays."
  libya_develop_oil_field_cost_bad_tt: "The base cost of developing an oil field in el-Sahara is §Y$3 billion§!. This is increased by [?lba_oil_nationalisation|%0R] because of our §YLevel of Nationalisation§!"
  libya_develop_oil_field_cost_tt: "The base cost of developing an oil field in Waha is §Y$6 billion§!. This is increased by [?lba_oil_nationalisation|%0R] because of our §YLevel of Nationalisation§!"
  libya_develop_el_sahara_fields: "Develop the el-Sharara Oil Fields"
@@ -1003,7 +1003,7 @@
  LBA_wmds_desc: "Since the start of the Libyan nuclear program in the 1970s, most of the knowledge and material sourcing has been handled by Friedrich Tinner, a Swiss nuclear engineer. He still heads our nuclear program and we should use his connections to start building centrifuges for nuclear enrichment."
  LBA_start_building_reactor_desc: "In 1979, the Soviet Union built a research reactor at Tajoura under IAEA supervision. This however, is not fit for our centrifuges and for nuclear weapons production. We need to build a proper nuclear reactor for uranium production."
  LBA_start_building_reactor_tt: "§RIf any country is crazy enough to start attacking countries with possible WMDs, we might be a target for them!§!"
- LBA_start_building_reactor: "[LBA.GetAdjective] Nuclear Program"
+ LBA_start_building_reactor: "Start Building A Reactor"
  LBA_arms_smuggling: "Smuggle Weapons"
  LBA_arms_smuggling_desc: "Due to the international sanctions, we can't really purchase weapons legally. However, we still have a few channels where we can bring more weapons for our troops."
  LBA_buy_nukes: "Buy Nukes"
@@ -2274,3 +2274,4 @@
  LibyaFocus.104.d: "With our security forces occupied elsewhere, the deserts of the [580.GetName] are basically unpatrolled. Taking advantage of this power vacuum, [FROM.GetNameDef] has sent a small contingent of troops to set up a small base in the town of Aozou. With the [FROM.GetAdjective] flying in the center of Aouzou town, [FROM.GetNameDef] has claimed the entire area for themselves."
  LibyaFocus.104.a: "There is nothing we can do"
  LibyaFocus.104.b: "They will pay for this!"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective] Nuclear Program"
