--- a/localisation/french/MD_traits_l_french.yml
+++ b/localisation/french/MD_traits_l_french.yml
@@ -193,10 +193,8 @@
  Cat_SAM_research: "Vitesse de recherche sur les missiles sol-air"
  Cat_ABM_research: "Vitesse de recherche sur les missiles anti-balistiques"
  Cat_space_research: "Vitesse de recherche sur toutes les technologies spatiales"
- Cat_satellite_research: "Vitesse de recherche des satellites"
  Cat_GNSS_research: "Vitesse de recherche des satellites GNSS"
  Cat_conventional_warhead_research: "Vitesse de recherche sur les ogives conventionnelles"
- Cat_nuclear_weapons_research: "Vitesse de la recherche sur les armes nucléaires"
  bold_attack_spirit: "Attaque en force"
  bold_attack_spirit_desc: "Comme le dit le proverbe : l'attaque est la meilleure des défenses."
  bold_attack_spirit_tt: "Commandants : §G50% de chance§! de §Y+1 d'attaque§! lors du passage au niveau supérieur."
@@ -478,4 +476,6 @@
  CAT_torpedoes_research: "Vitesse de recherche des torpilles"
  CAT_landing_craft_research: "Vitesse de recherche des péniches de débarquement"
  CAT_genes_research: "Vitesse de recherche en génie génétique"
- Cat_nuclear_reactors_research: "Vitesse de recherche sur les réacteurs nucléaires"
+ CAT_satellite_research: "Vitesse de recherche des satellites"
+ CAT_nuclear_weapons_research: "Vitesse de la recherche sur les armes nucléaires"
+ CAT_nuclear_reactors_research: "Vitesse de recherche sur les réacteurs nucléaires"
