--- a/localisation/polish/MD_focus_ABK_l_polish.yml
+++ b/localisation/polish/MD_focus_ABK_l_polish.yml
@@ -81,7 +81,7 @@
  ABK_modernize_army_desc: "Nie możemy sobie pozwolić na osłabienie naszej armii, bo to ona jest naszym gwarantem suwerenności"
  ABK_network_warfare_desc: "Wojna sieciocentryczna, zwana także operacjami sieciocentrycznymi lub wojną sieciocentryczną, to doktryna wojskowa lub teoria wojny, która ma na celu przełożenie przewagi informacyjnej, możliwej częściowo dzięki technologii informacyjnej, na przewagę konkurencyjną dzięki solidnej sieci komputerowej dobrze poinformowane, rozproszone geograficznie siły."
  ABK_decentralized_warfare_desc: "Działania wojenne czwartej generacji (4GW) to konflikt charakteryzujący się zacieraniem granic między wojną a polityką, kombatantami i ludnością cywilną. Termin ten został po raz pierwszy użyty w 1980 roku przez zespół analityków ze Stanów Zjednoczonych, w tym paleokonserwatystę Williama S. Linda, do opisania powrotu działań wojennych do zdecentralizowanej formy."
- ABK_president_illness2: "Komunizm powraca"
+ ABK_president_illness2: "Powrót do komunizmu"
  ABK_president_illness2_desc: "Znów w pełni staniemy pod czerwonymi sztandarami!"
  ABK_china_help: "Inwestycje chińskie"
  ABK_china_help_desc: "Udało nam się przyciągnąć chińskie inwestycje dla rozwoju naszego kraju"
@@ -97,12 +97,12 @@
  ABK_one_party_desc: "Nasz kraj nie potrzebuje dziesiątek różnych partii, wystarczy nam jedna"
  ABK_china_invest_tech: "Chiny inwestują w nasz sektor technologiczny"
  ABK_china_invest_tech_desc: "Chińskie firmy są gotowe finansować nasz sektor techniczny"
- ABK_defend_our_home: "Chrońmy nasz dom!"
- ABK_defend_our_home_desc: "Nasz kraj jest zawsze zagrożony - chrońmy go"
+ ABK_defend_our_home: "Ochrona naszego domu"
+ ABK_defend_our_home_desc: "Nasz kraj jest zawsze zagrożony – chrońmy go"
  ABK_defend_our_home2: "Struktury obronne"
- ABK_defend_our_home2_desc: "Trzeba nie tylko inspirować ludzi, ale także być fizycznie gotowym do obrony."
+ ABK_defend_our_home2_desc: "Trzeba nie tylko inspirować ludzi, ale także być fizycznie gotowym do obrony naszych granic."
  ABK_china_invest_mesta: "Chińskie inwestycje trwają"
- ABK_china_invest_mesta_desc: "Chińskie firmy zaobserwowały pozytywną reakcję poprzednich inwestycji i są gotowe kontynuować je w tym samym duchu"
+ ABK_china_invest_mesta_desc: "Chińskie firmy odnotowały pozytywne rezultaty poprzednich inwestycji i są gotowe kontynuować je w tym samym duchu"
  ABK_atheism: "Ateizm w każdym domu"
  ABK_atheism_desc: "Propaganda Marksa poprowadzi nasz naród z powrotem na chwalebną ścieżkę ateizmu!"
  ABK_mil_prop: "Propaganda wojskowa"
@@ -116,7 +116,7 @@
  ABK_fiveka: "Pierwszy plan pięcioletni"
  ABK_fiveka_desc: "Pora wrócić do praktyki planów pięcioletnich"
  ABK_free_education: "Darmowa edukacja"
- ABK_free_education_desc: "Każdy abhaz powinien być wykształcony!"
+ ABK_free_education_desc: "Każdy Abchaz powinien być wykształcony, niezależnie od tego, gdzie się znajduje!"
  ABK_collectivism: "Kolektywizm"
  ABK_collectivism_desc: "Przywróćmy Abchazom jedność poprzez kolektywizm"
  ABK_sup_work: "Będziemy wspierać pracowników"
@@ -163,7 +163,7 @@
  ABK_abkhazvozvrashenstroy_desc: "Fundusz ten będzie kluczowy dla nowej gospodarki Abchazji, przy jego pomocy będziemy w stanie przyciągnąć inwestycje dla naszego kraju z całego świata"
  ABK_parli_dead: "Porozumieć się z parlamentem"
  ABK_parli_dead_desc: "Najwyższy czas wyeliminować ten relikt demokracji"
- ABK_dictatorship: "Jestem monarchą-dyktatorem"
+ ABK_dictatorship: "Monarcha dyktatorski"
  ABK_dictatorship_desc: "Tylko silna ręka monarchy uratuje nasz kraj"
  ABK_sov_heast: "Przyjaźń z Rosją"
  ABK_sov_heast_desc: "Jesteśmy gotowi zaprzyjaźnić się z taką Rosją"
