--- a/localisation/polish/MD_focus_LBA_l_polish.yml
+++ b/localisation/polish/MD_focus_LBA_l_polish.yml
@@ -1003,7 +1003,7 @@
  LBA_wmds_desc: "Od rozpoczęcia libijskiego programu nuklearnego w latach 70. XX w. większością wiedzy i pozyskiwaniem materiałów zajmował się Friedrich Tinner, szwajcarski inżynier nuklearny. Nadal kieruje naszym programem nuklearnym i powinniśmy wykorzystać jego powiązania, aby rozpocząć budowę wirówek do wzbogacania jądrowego."
  LBA_start_building_reactor_desc: "W 1979 roku Związek Radziecki zbudował reaktor badawczy w Tajoura pod nadzorem MAEA. To jednak nie nadaje się do naszych wirówek i do produkcji broni nuklearnej. Musimy zbudować odpowiedni reaktor jądrowy do produkcji uranu."
  LBA_start_building_reactor_tt: "§RIJeśli jakikolwiek kraj będzie na tyle szalony, aby zacząć atakować kraje przy użyciu możliwej broni masowego rażenia, możemy być dla niego celem!§!"
- LBA_start_building_reactor: "[LBA.GetAdjective] Program nuklearny"
+ LBA_start_building_reactor: "Rozpocznij budowę reaktora"
  LBA_arms_smuggling: "Przemycać broń"
  LBA_arms_smuggling_desc: "Ze względu na międzynarodowe sankcje tak naprawdę nie możemy legalnie kupować broni. Jednak nadal mamy kilka kanałów, dzięki którym możemy dostarczyć więcej broni dla naszych żołnierzy."
  LBA_buy_nukes: "Kup Nuke'a"
@@ -2274,3 +2274,4 @@
  LibyaFocus.104.d: "Ponieważ nasze siły bezpieczeństwa są zajęte gdzie indziej, pustynie [580.GetName] są zasadniczo niepatrolowane. Korzystając z tej próżni władzy, [FROM.GetNameDef] wysłano mały kontyngent wojsk, aby utworzyć małą bazę w mieście Aozou. Dzięki lotom [FROM.GetAdjective] w centrum miasta Aouzou, [FROM.GetNameDef] przejęto cały obszar dla siebie."
  LibyaFocus.104.a: "Nie ma nic, co moglibyśmy zrobić"
  LibyaFocus.104.b: "Oni za to zapłacą!"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective]Program nuklearny"
