--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -1526,7 +1526,7 @@
  Montenegro.7.t: "Czarnogóra prosi o pakt o nieagresji"
  Montenegro.7.d: "Minister spraw zagranicznych Czarnogóry przybył do naszej stolicy, aby omówić warunki paktu o nieagresji, wspierając ich neutralność."
  Montenegro.7.a: "Czarnogóra będzie chroniona!"
- Montenegro.7.b: "No, thanks"
+ Montenegro.7.b: "Nie, dziękuję"
  Montenegro.8.t: "Projekt Unii?"
  Montenegro.8.d: "Do Belgradu wpłynął oficjalny wniosek Czarnogóry o odtworzenie rozwiązanej jakiś czas temu Unii Serbsko-Czarnogórskiej. Czy przyjmiemy tę historyczną prośbę?"
  Montenegro.8.a: "Witamy spowrotem!"
