--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -2249,8 +2249,6 @@
  CAT_lha: "Lądujące śmigłowce szturmowe (LHA)"
  CAT_lpd: "Amfibie transportowe statki dokowe (LPD)"
  CAT_internet_tech: "Cała technologia internetowa"
- Cat_Western: "Zachodnia doktryna walki"
- Cat_Eastern: "Wschodnia doktryna walki"
  CAT_offensive_doctrine: "Ofensywna doktryna"
  CAT_defensive_doctrine: "Doktryna defensywna"
  CAT_unconventional: "Niekonwencjonalna wojna"
@@ -4790,3 +4788,5 @@
  GER_RODS1: "Pręty od Boga"
  GER_RODS2: "Pręty wolframowe"
  GER_RODS3: "Pręty uranowe"
+ CAT_western: "Zachodnia doktryna walki"
+ CAT_eastern: "Wschodnia doktryna walki"
