--- a/localisation/russian/MD_focus_ABK_l_russian.yml
+++ b/localisation/russian/MD_focus_ABK_l_russian.yml
@@ -97,12 +97,12 @@
  ABK_one_party_desc: "Нашей стране не нужны десятки различных партий, нам достаточно одной"
  ABK_china_invest_tech: "Инвестиции Китая в технологический сектор"
  ABK_china_invest_tech_desc: "Китайские компании готовы финансировать наш технический сектор"
- ABK_defend_our_home: "Защитим наш дом!"
- ABK_defend_our_home_desc: "Наша страна всегда находится под угрозой опасности - давайте защитим ее"
+ ABK_defend_our_home: "Защита нашего дома"
+ ABK_defend_our_home_desc: "Наша страна всегда под угрозой опасности – давайте защитим ее"
  ABK_defend_our_home2: "Оборонительные сооружения"
- ABK_defend_our_home2_desc: "Необходимо не только вдохновлять народ, но и быть физически готовым к обороне"
+ ABK_defend_our_home2_desc: "Необходимо не только воодушевлять народ, но и быть физически готовым к защите наших границ."
  ABK_china_invest_mesta: "Продолжение китайских инвестиций"
- ABK_china_invest_mesta_desc: "Китайские компании увидели положительный отклик от предыдущих инвестиций и готовы продолжать в том же духе"
+ ABK_china_invest_mesta_desc: "Китайские компании увидели положительный результат от предыдущих инвестиций и готовы продолжать в том же духе."
  ABK_atheism: "Атеизм в каждом доме"
  ABK_atheism_desc: "Пропаганда Маркса вернет наш народ на славный путь атеизма!"
  ABK_mil_prop: "Военная пропаганда"
@@ -116,7 +116,7 @@
  ABK_fiveka: "Первый пятилетний план"
  ABK_fiveka_desc: "Пришло время вернуться к практике пятилетних планов"
  ABK_free_education: "Бесплатное образование"
- ABK_free_education_desc: "Каждый абхаз должен быть образованным!"
+ ABK_free_education_desc: "Каждый абхаз должен получить образование, где бы он ни находился!"
  ABK_collectivism: "Коллективизм"
  ABK_collectivism_desc: "Вернем абхазам единство через коллективизм"
  ABK_sup_work: "Мы поддержим рабочих"
@@ -163,7 +163,7 @@
  ABK_abkhazvozvrashenstroy_desc: "Этот фонд станет ключевым в новой экономике Абхазии, с его помощью мы сможем привлечь инвестиции для нашей страны со всего мира"
  ABK_parli_dead: "Сделка с парламентом"
  ABK_parli_dead_desc: "Пришло время ликвидировать этот пережиток демократии"
- ABK_dictatorship: "Я - диктатор-монарх"
+ ABK_dictatorship: "Диктаторский монарх"
  ABK_dictatorship_desc: "Только сильная рука монарха спасет нашу страну"
  ABK_sov_heast: "Дружба с Россией"
  ABK_sov_heast_desc: "С такой Россией мы готовы дружить"
