--- a/localisation/russian/MD_focus_BLR_l_russian.yml
+++ b/localisation/russian/MD_focus_BLR_l_russian.yml
@@ -1400,7 +1400,7 @@
  BLR_Europe_last_dictator: "Последний диктатор Европы"
  BLR_kal_with: "ЗАО \"Белорусская калийная компания\""
  BLR_kal_without: "ОАО \"Белорусская калийная компания\""
- BLR_BRSM: "БРСМ"
+ BLR_BRSM: "Белорусский республиканский союз молодёжи"
  BLR_Poles_goes: "Поляки уходят"
  BLR_Internet_Cencorship: "Интернет-цензура"
  BLR_National_Security_Service: "Белорусское бюро расследований"
