--- a/localisation/russian/MD_focus_EGY_l_russian.yml
+++ b/localisation/russian/MD_focus_EGY_l_russian.yml
@@ -914,7 +914,7 @@
  EGY_buy_m777: "Покупка М109А5"
  EGY_buy_m777_desc: "M109A5 Американская самоходно-артиллерийская установка, класс самоходных гаубиц. Они нужны нам для усиления нашей сухопутной армии."
  EGY_buy_arms: "§YПокупка оружия§!"
- EGY_buy_arms_desc: "Нашим дипломатам нужно приложить больше усилий, чтобы договориться о сделках по оружию."
+ EGY_buy_arms_desc: "Нашим дипломатам необходимо приложить больше усилий, чтобы договориться о сделках по оружию с иностранными государствами, особенно с крупными поставщиками."
  EGY_arms_purch_idea: "Дипломатические усилия"
  egypt.129.t: "Сделка с египтянами"
  egypt.129.d: "Египетские военные хотят купить наши танки M1A2, должны ли мы продать их им?"
