--- a/localisation/russian/MD_focus_IRQ_l_russian.yml
+++ b/localisation/russian/MD_focus_IRQ_l_russian.yml
@@ -794,7 +794,7 @@
  iraqi_flavor_events.6.t: "Баас возрождается в Ираке"
  iraqi_flavor_events.6.d: "Сегодня утром в 7:21 Иззат Ибрагим ад-Дури объявил, что его войска пойдут на Багдад, чтобы арестовать всех тех, кто «сотрудничал и совпадал с империалистическими сионистами», и предать их суду. Ад-Дури командует значительными силами, многие из которых являются бывшими командирами и солдатами, верными режиму Баас при Саддаме Хусейне. После краха режима Саддама Ирак столкнулся с относительной нестабильностью, а недавние события стали переломным моментом в конфликте. Многие иракцы, особенно сунниты, надеются, что Аль-Дури и его партия Баас смогут восстановить иракскую гегемонию и безопасность, которой иракцы наслаждались при прежнем режиме. На данный момент иракцам придется терпеть гражданскую войну, в которую им предстоит быть вовлеченными."
  iraqi_flavor_events.6.a: "Ого"
- iraqi_flavor_events.7.t: "Ayatollah Al-Sistani Leads the Iraqi Islamic Republic"
+ iraqi_flavor_events.7.t: "Аятолла Аль-Систани возглавляет Иракскую Исламскую Республику"
  iraqi_flavor_events.7.d: "После исламской революции в Ираке аятолла Али-Систани стал Верховным лидером. Неудачная конституция, разработанная в то время, настолько возмутила иракских шиитов, что они объединились в борьбе против нового иракского правительства, созданного коалиционными силами под руководством США. При поддержке Ирана и различных шиитских ополчений иракские революционеры в течение нескольких месяцев пытались захватить несколько ключевых правительственных зданий, часто превосходя силы безопасности. В результате многие иракские офицеры заявили, что не будут участвовать в конфликте и будут лояльны к любому правящему режиму. Соединённые Штаты и другие коалиционные силы начали готовиться к выводу своих войск в соседние Иорданию и Саудовскую Аравию, чтобы обезопасить своих военнослужащих."
  iraqi_flavor_events.7.a: "Беспокойство"
  iraqi_flavor_events.8.t: "Садристское движение шагает по Ираку"
@@ -1102,33 +1102,33 @@
  iraq_md.41.b: "Военную поддержку"
  iraq_md.41.c: "Промышленную поддержку"
  iraq_md.50.t: "Шиитские группы начинают протестовать"
- iraq_md.50.d: "Several Shi'ite organizations have begun protesting our recently implemented policies, and lack of support for the Shi'ite militias in the conflict against the Sunnis. They are trying to attempt massive rallies in an attempt to thwart our governments progress.."
- iraq_md.50.a: "Send in the Riot Police, Deadly Force is Not Authorized"
- iraq_md.50.b: "Send in the Riot Police, Deadly Force is Authorized"
- iraq_md.51.t: "Rioters Stage Plans insde of Mosques in Najaf and Karbala"
- iraq_md.51.d: "Shi'ite militants and groups have been using mosques within Najaf and Karbala to stage plans for their riots. This has been done largely without our knowledge this whole time.."
- iraq_md.51.a: "Block Transport to the Mosques"
- iraq_md.51.b: "Close and Garrison the Mosques"
- iraq_md.52.t: "Protesters Occupy Airports"
- iraq_md.52.d: "Several protesters from the recent Shi'ite movements have began occupying airports in hopes of disrupting diplomatic efforts and day to day life for Iraqis not participating in their movement."
- iraq_md.52.a: "Close the Airports for Now"
- iraq_md.52.b: "Send Troops to the Airports"
- iraq_md.53.t: "Protesters Adopt Revolutionary Slogans"
- iraq_md.53.d: "The protesters and Shi'ite groups involved in the movement recently adopted revolutionary slogans that make it evident they are after a complete overthrow of our government.."
+ iraq_md.50.d: "Несколько шиитских организаций начали протестовать против нашей недавно проводимой политики и отсутствия поддержки шиитских ополченцев в конфликте против суннитов. Они пытаются провести массовые митинги, пытаясь помешать прогрессу нашего правительства."
+ iraq_md.50.a: "Отправьте ОМОН, смертоносная сила не разрешена"
+ iraq_md.50.b: "Отправьте ОМОН, смертоносная сила разрешена"
+ iraq_md.51.t: "Мятежники подготовили планы внутри мечетей в Наджафе и Кербеле"
+ iraq_md.51.d: "Шиитские боевики и группы использовали мечети в Наджафе и Кербеле для подготовки планов своих беспорядков. Все это время это делалось практически без нашего ведома.."
+ iraq_md.51.a: "Блок-транспорт к мечетям"
+ iraq_md.51.b: "Закрыть и поставить гарнизон в мечетях"
+ iraq_md.52.t: "Протестующие захватывают аэропорты"
+ iraq_md.52.d: "Несколько протестующих из недавних шиитских движений начали занимать аэропорты в надежде сорвать дипломатические усилия и повседневную жизнь иракцев, не участвующих в их движении."
+ iraq_md.52.a: "Закройте аэропорты на данный момент"
+ iraq_md.52.b: "Отправьте войска в аэропорты"
+ iraq_md.53.t: "Протестующие выступают с революционными лозунгами"
+ iraq_md.53.d: "Протестующие и шиитские группы, участвующие в движении, недавно приняли революционные лозунги, которые ясно показывают, что они стремятся к полному свержению нашего правительства."
  iraq_md.53.a: "Чёрт"
- iraq_md.54.t: "Sadrist Call for our Government to Step Down"
+ iraq_md.54.t: "Садристы призывают наше правительство уйти в отставку"
  iraq_md.54.d: "Муктада ас-Садр и его организация возглавили большинство протестов, собрав достаточную поддержку, чтобы привлечь на свою сторону несколько шиитских организаций. Они требуют, чтобы наше правительство ушло в отставку и позволило им «направить Ирак в правильном направлении»."
- iraq_md.54.a: "Let the Military Deal With Them.."
- iraq_md.54.b: "We Can't Do This.."
+ iraq_md.54.a: "Пусть военные с ними разбираются.."
+ iraq_md.54.b: "Мы не можем этого сделать.."
  iraq_md.55.t: "Badr Brigades Call for our Government to Step Down"
  iraq_md.55.d: "The Badr Brigades and their supporters have been leading the majority of the protests, mustering enough support to get several Shi'ite organizations on their side. They are demanding that our government steps down and allow them to 'steer Iraq towards the right direction'."
- iraq_md.55.a: "Let the Military Deal With Them.."
- iraq_md.55.b: "We Can't Do This.."
- iraq_md.56.t: "Iraq Would Like to Strengthen Economic Cooperation"
- iraq_md.56.d: "The Iraqi government is asking for our compliance in their economic endeavors, as they would like to establish stronger ties through trade and other means."
- iraq_md.56.a: "Where Do We Sign?"
- iraq_md.56.b: "We're Not Interested"
- iraq_md.57.t: "[FROM.GetName] Signs Onto Our Economic Deal"
+ iraq_md.55.a: "Пусть военные с ними разбираются.."
+ iraq_md.55.b: "Мы не можем этого сделать.."
+ iraq_md.56.t: "Ирак хотел бы укрепить экономическое сотрудничество"
+ iraq_md.56.d: "Правительство Ирака просит нас соблюдать его экономические начинания, поскольку оно хотело бы установить более прочные связи посредством торговли и других средств."
+ iraq_md.56.a: "Где мы подписываем?"
+ iraq_md.56.b: "Мы не заинтересованы"
+ iraq_md.57.t: "[FROM.GetName]Признаки нашей экономической сделки"
  iraq_md.57.d: "[FROM.GetName] has agreed to strengthen economic ties with our government and state, bolstering our position internationally."
  iraq_md.57.a: "Отлично"
  iraq_md.58.t: "[FROM.GetName] Refuses to Signs Onto Our Economic Deal"
@@ -1136,7 +1136,7 @@
  iraq_md.58.a: "Черт"
  iraq_md.59.t: "Ирак предлагает интересное предложение.."
  iraq_md.59.d: "The Iraqi government has recently come forward with an interesting offer. They are requesting that we hand over some control of our government and state to their central government in Iraq, in exchange for the transfer of all Kurdish territory currently under the control of the Iraqi government."
- iraq_md.59.a: "A Great Offer!"
+ iraq_md.59.a: "Отличное предложение!"
  iraq_md.59.b: "Нет, ни в коем случае"
  iraq_md.60.t: "Курдистан принимает наше предложение"
  iraq_md.60.d: "Курдское правительство согласилось на предложенную нами сделку, и некоторые правительственные посты перешли в наши руки."
@@ -1161,14 +1161,14 @@
  iraq_md.66.d: "Иракское правительство давит на нас, требуя провести внеочередные выборы, тем более что недавно возникшее левое движение проникло глубоко в курдское общество."
  iraq_md.66.a: "Ладно, хорошо"
  iraq_md.66.b: "Нет"
- iraq_md.67.t: "Iraq Attacks our Influence!"
- iraq_md.67.d: "The Iraqi government has attacked our influence in many of the Gulf nations, creating anti-U.S. sentiment within their societies."
- iraq_md.67.a: "What the Hell?"
- iraq_md.68.t: "Iraq Arms Separatist Groups in the West"
- iraq_md.68.d: "The Iraqi government has armed and trained a few groups that seek out the independence of their own states in the west of our nation, mainly some Kurdish groups and some in Khuzestan. Our troops must be ready to respond as soon as possible, and try to limit Iraqi influence where possible."
+ iraq_md.67.t: "Ирак атакует наше влияние!"
+ iraq_md.67.d: "Иракское правительство атаковало наше влияние во многих странах Персидского залива, создавая антиамериканскую атмосферу. настроения в своих обществах."
+ iraq_md.67.a: "Какого чёрта?"
+ iraq_md.68.t: "Ирак вооружает сепаратистские группы на Западе"
+ iraq_md.68.d: "Правительство Ирака вооружило и обучило несколько групп, которые стремятся к независимости своих государств на западе нашей страны, в основном некоторые курдские группы и некоторые в Хузестане. Наши войска должны быть готовы отреагировать как можно скорее и постараться ограничить иракское влияние, где это возможно."
  iraq_md.68.a: "Понятно"
- iraq_md.69.t: "Iraq Invites Us to Their Anti-Iranian Coalition"
- iraq_md.69.d: "The Iraqi government is going around looking for any power interested in helping them overthrow the Iranian government, and bring about liberation to certain states in the west of the nation. They have come to us, offering us some concessions if we agree to assist them in this war."
+ iraq_md.69.t: "Ирак приглашает нас в свою антииранскую коалицию"
+ iraq_md.69.d: "Иракское правительство ищет любую силу, заинтересованную в том, чтобы помочь им свергнуть иранское правительство и добиться освобождения определенных штатов на западе страны. Они пришли к нам, предлагая нам некоторые уступки, если мы согласимся помочь им в этой войне."
  iraq_md.69.a: "Понятно"
  iraq_md.69.b: "Нет"
  iraq_md.70.t: "[FROM.GetName] Agrees"
@@ -1180,8 +1180,8 @@
  iraq_md.72.t: ""
  iraq_md.72.d: ""
  iraq_md.72.a: ""
- iraq_md.73.t: "Successful Revolution in Arabia"
- iraq_md.73.d: "Our involvement in sowing revolutionary ideals in Arabia has paid off, and certain parts of the army have taken up arms with the people and are fighting against their oppressive state!"
+ iraq_md.73.t: "Успешная революция в Аравии"
+ iraq_md.73.d: "Наше участие в насаждении революционных идеалов в Аравии принесло свои плоды, и некоторые части армии взялись за оружие вместе с народом и борются против его деспотического государства!"
  iraq_md.73.a: "Хорошо"
  iraq_md.74.t: "Саддам Хусейн умер!"
  iraq_md.74.d: "Сегодня в 6:00 утра президент был объявлен мертвым в своей постели в окружении близких членов семьи. Его жизнь была полна взлетов и падений, он пережил несколько войн с Соединенными Штатами и другими странами. Однако с его смертью наступает новое начало. Саддам назначил одного из своих сыновей руководителем нации, хотя до недавнего времени об этом никто не знал."
