--- a/localisation/russian/MD_focus_LBA_l_russian.yml
+++ b/localisation/russian/MD_focus_LBA_l_russian.yml
@@ -1003,7 +1003,7 @@
  LBA_wmds_desc: "С момента начала ливийской ядерной программы в 1970-х годах большую часть знаний и материалов получал Фридрих Тиннер, швейцарский инженер-ядерщик. Он до сих пор возглавляет нашу ядерную программу, и мы должны использовать его связи, чтобы начать строительство центрифуг для обогащения ядерного топлива."
  LBA_start_building_reactor_desc: "В 1979 году Советский Союз построил исследовательский реактор в Таджуре под наблюдением МАГАТЭ. Однако он не подходит для наших центрифуг и для производства ядерного оружия. Нам нужно построить нормальный ядерный реактор для производства урана."
  LBA_start_building_reactor_tt: "§RЕсли какая-нибудь страна будет настолько безумна, что начнет нападать на страны с возможным ОМУ, мы можем стать для нее мишенью!§!"
- LBA_start_building_reactor: "[LBA.GetAdjective] ядерная программа"
+ LBA_start_building_reactor: "Начать строить реактор"
  LBA_arms_smuggling: "Контрабанда оружия"
  LBA_arms_smuggling_desc: "Из-за международных санкций мы не можем покупать оружие легально. Однако у нас все еще есть несколько каналов, по которым мы можем доставить больше оружия для наших войск."
  LBA_buy_nukes: "Купить ядерное оружие"
@@ -2274,3 +2274,4 @@
  LibyaFocus.104.d: "Поскольку наши силы безопасности заняты в других местах, пустыни [580.GetName] практически не патрулируются. Воспользовавшись этим вакуумом власти, [FROM.GetNameDef] отправил небольшой контингент войск, чтобы создать небольшую базу в городе Аозу. С помощью [FROM.GetNameDef], летающего в центре города Аозу, [FROM.GetNameDef] присвоил себе всю территорию."
  LibyaFocus.104.a: "Мы ничего не можем сделать"
  LibyaFocus.104.b: "Они заплатят за это!"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective] ядерная программа"
