--- a/localisation/russian/MD_traits_l_russian.yml
+++ b/localisation/russian/MD_traits_l_russian.yml
@@ -193,10 +193,8 @@
  Cat_SAM_research: "Скорость исследования ракет класса «земля-воздух»"
  Cat_ABM_research: "Скорость исследования противоракетной обороны"
  Cat_space_research: "Скорость исследования всех космических технологий"
- Cat_satellite_research: "Скорость исследования спутников"
  Cat_GNSS_research: "Скорость исследования спутников GNSS"
  Cat_conventional_warhead_research: "Скорость исследования обычных боеголовок"
- Cat_nuclear_weapons_research: "Скорость исследования ядерного оружия"
  bold_attack_spirit: "Смелое нападение"
  bold_attack_spirit_desc: "Как говорится, сильное нападение - лучшая защита"
  bold_attack_spirit_tt: "Лидер армии: §G50% шанс§! на §Y+1 атаку§! при повышении уровня."
@@ -478,4 +476,6 @@
  early_guerilla_warfare_tt: "New Army Leader: §G50% chance§! to begin with the §YGuerrilla Leader§! trait."
  armored_mass_assault_tt: "New Army Leader: §G50% chance§! to begin with §YPanzer Leader§!, §YArtillery Leader§! or §YAir Cavalry Leader§! trait."
  CAT_genes_research: "Скорость генно-инженерных исследований"
- Cat_nuclear_reactors_research: "Скорость исследования ядерных реакторов"
+ CAT_satellite_research: "Satellites Research Speed"
+ CAT_nuclear_weapons_research: "Nuclear Weapons Research Speed"
+ CAT_nuclear_reactors_research: "Nuclear Reactors Research Speed"
