--- a/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
@@ -913,7 +913,7 @@
  EGY_buy_m777: "购买M109A5"
  EGY_buy_m777_desc: "M109A5美国自行火炮是一种自行榴弹炮。我们需要他们来加强我们的地面部队。"
  EGY_buy_arms: "§Y军火贸易§!"
- EGY_buy_arms_desc: "我们的外交官需要更加努力地就军火交易达成一致。"
+ EGY_buy_arms_desc: "我们的外交官需要更加努力地与外国，特别是主要供应国达成武器交易。"
  EGY_arms_purch_idea: "外交努力"
  egypt.129.t: "埃及军火交易"
  egypt.129.d: "埃及军方想买我们的M1A2坦克，我们卖给他们吗？"
