--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -83,9 +83,9 @@
  GER_Neuer_Markt: "新市场"
  GER_Neuer_Markt_desc: "新市场是德意志交易所的一个细分市场，于1997年成立，反映了“新技术”的市场细分，并为未来导向的行业的年轻公司提供通过首次公开募股进行股权融资的机会。"
  GER_Home_Grown_IT: "本土IT"
- GER_Home_Grown_IT_desc: "通过投资我们自己的公司，我们不再依赖外国公司"
+ GER_Home_Grown_IT_desc: "通过投资我们自己的公司，我们不再依赖外国公司。"
  GER_home_Grown_Sozialmedia: "本土社交媒体"
- GER_home_Grown_Sozialmedia_desc: "通过投资我们自己的公司，我们不再依赖外国公司"
+ GER_home_Grown_Sozialmedia_desc: "通过投资我们自己的公司，我们不再依赖外国公司。"
  GER_home_Grown_Software: "国产软件"
  GER_home_Grown_Software_desc: "通过投资我们的公司，我们可以减少对外国科技巨头的依赖，更多地依靠我们自己的公司！"
  GER_Tech_DAX: "科技DAX"
