--- a/localisation/simp_chinese/MD_focus_SOO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOO_l_simp_chinese.yml
@@ -20,7 +20,7 @@
  SOO_Boost_the_local_flour_production_idea: "提高当地面粉产量"
  SOO_Ossetian_Opium_produce_idea: "奥塞梯鸦片生产"
  SOO_Raise_Import_Tariffs_idea: "提高进口关税"
- SOO_Raise_Import_Tariffs_idea_desc: "额外收入 = 0.012"
+ SOO_Raise_Import_Tariffs_idea_desc: "额外收入：$§G0.012§!"
  SOO_farming_income_idea: "农场收入"
  SOO_The_soviet_era_Works_state_mod1: "苏联遗产"
  SOO_The_soviet_era_Works_state_mod2: "苏联遗产"
@@ -44,15 +44,15 @@
  SOO_five_year_plans_idea: "五年计划"
  SOO_againt_georgia_idea: "与格鲁吉亚的战争战略"
  SOO_Roki_tunnel_toll: "罗基隧道收费"
- SOO_Roki_tunnel_toll_desc: "额外收入 = 0.010"
+ SOO_Roki_tunnel_toll_desc: "额外收入：$§G0.010§!"
  SOO_defence_doctrine: "防御学说"
  SOO_invervention_rus: "俄罗斯的军事干预主义"
  SOO_help_ossetia_SOV: "在§Y[SOO.GetNameWithFlag]§!的投资"
- SOO_help_ossetia_SOV_desc: "我们将为南奥塞梯的预算提供财政支持，因为这个国家本身无法做到这一点。额外收入 = §R-0.120§!"
+ SOO_help_ossetia_SOV_desc: "我们将为南奥塞梯的预算提供财政支持，因为这个国家本身无法做到这一点。额外收入：$§R-0.120§!"
  SOO_help_ossetia: "来自§Y[SOV.GetNameWithFlag]§!的投资"
- SOO_help_ossetia_desc: "俄罗斯为我们提供资金，这使我们的经济能够维持下去。额外收入 = §G0.120§!"
+ SOO_help_ossetia_desc: "俄罗斯为我们提供资金，这使我们的经济能够维持下去。额外收入：$§G0.120§!"
  SOO_develop_turism: "发展旅游业"
- SOO_develop_turism_desc: "我们将发展国内旅游业，这将为我们的财政带来额外收入。额外收入 = §G0.100§!"
+ SOO_develop_turism_desc: "我们将发展国内旅游业，这将为我们的财政带来额外收入。额外收入：$§G0.100§!"
  SOO_Mamison_path: "马米森山口"
  SOO_Mamison_path_desc: ""
  SOO_hydroelectric_dams: "微型水力发电系统"
