--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -3912,17 +3912,17 @@
  amphibious_warfare_experts: "两栖战争专家"
  amphibious_warfare_experts_desc: "通过不断地训练登陆技巧和河流渡过，我们的海军陆战队将成为两栖军事行动的领先专家。"
  thunder_runs: "雷霆突击"
- thunder_runs_desc: "以在敌方造成混乱和伤害为目标，我们的装甲部队将被训练成能够对敌方领土进行快速打击，即使没有后续部队紧随其后。"
+ thunder_runs_desc: "为了给敌人造成混乱和伤害，我们的装甲部队将接受训练，即使在没有后续部队的情况下也能深入敌方领土进行快速打击。"
  shore_directed_fires: "岸上指挥火力"
- shore_directed_fires_desc: "利用训练有素的观察员，海军陆战队在沙滩上将能够精确地指挥海军火力支援的使用。"
+ shore_directed_fires_desc: "利用训练有素的观察员，海滩上的海军陆战队员将能够精确指挥海军火力支援的地点。"
  dedicated_breaching_parties: "专业的突破小组"
  dedicated_breaching_parties_desc: "通过训练摧毁敌方的防御工事，这些部队将被训练成能够在战斗行动中轻松地突破敌方的障碍物。"
  logistical_experts: "后勤专家"
- logistical_experts_desc: "由于我们需要运输的人员和设备的数量，我们的部队支援和补给公司将成为将人员和物资运送到接触点的专家，而且延迟最小。"
+ logistical_experts_desc: "随着我们需要运送的人员和设备数量的增加，我们的部队支援和供应公司将成为以最少的延误将人员和物资运送到接触点的专家。"
  rapid_mission_planning: "快速任务规划"
  rapid_mission_planning_desc: "为了快速利用机会和机遇，我们的部队将练习快速规划和执行战斗任务，根据需要进行。"
  infantry_amphibious_strike_forces: "步兵两栖攻击部队"
- infantry_amphibious_strike_forces_desc: "主要依靠训练有素的轻步兵部队，我们的海军陆战队将成为在激烈行动中打击和摧毁敌方关键目标的专家。"
+ infantry_amphibious_strike_forces_desc: "主要依靠训练有素的轻步兵部队，我们的海军陆战队将成为在两栖作战中打击和摧毁敌方关键目标的专家。"
  the_few_the_proud: "孤傲"
  the_few_the_proud_desc: "我们的海军陆战队步兵将是一支精锐的战斗部队，虽然人数不多，但作为登陆部队的技术和能力是很高的。"
  one_if_by_land: "一个灯笼走陆路"
@@ -4008,7 +4008,7 @@
  dispersed_jtac_teams: "分散末端攻击引导小组"
  dispersed_jtac_teams_desc: "通过将我们的联合末端攻击引导小组分散到一线部队中，我们将能够在这些部队最需要的时候协助他们进行火力支援，而不是依赖指挥官的请求。"
  forward_staged_supply_lines: "前进补给线"
- forward_staged_supply_lines_desc: "通过将补给和后备人员部署在前线，我们可以最大限度地缩短补给和增援请求的周转时间，从而加快我们部队的机动性。"
+ forward_staged_supply_lines_desc: "通过标准化向前线的补给和替换，我们可以最大限度地减少补给和增援请求的周转时间，加快部队的机动性。"
  helicopter_gunship_interdiction: "武装直升机拦截"
  helicopter_gunship_interdiction_desc: "利用我们的攻击直升机，我们可以快速反击试图经过或靠近我们的敌军。"
  prioritized_gunship_crews: "优先武装直升机人员"
@@ -4056,7 +4056,7 @@
  critical_care_medevac: "重症监护医疗后送"
  critical_care_medevac_desc: "为了确保我们的伤员生存，我们所有的空中机动医疗后送人员都将成为重症监护护理人员和护士，以最大程度地增加我们人员的生存几率，以便日后继续战斗。"
  airmobile_leadership_courses: "空中机动领导力课程"
- airmobile_leadership_courses_desc: "为了更好地教导我们的领导层如何在这种环境下运作，将设立专门的空中机动领导力课程来教授这些行动的细节。"
+ airmobile_leadership_courses_desc: "为了更好地教导我们的领导如何在这种环境下行动，我们将设立专门的空中机动领导力课程，教授这些行动的来龙去脉。"
  combat_resupply_flights: "战斗中补给飞行"
  combat_resupply_flights_desc: "不管风险如何，我们的空中机动后勤飞行员将能够驾驶飞机进入战区，为我们的士兵提供弹药和装备。"
  expanded_light_fighter_bypass_operations: "扩大轻型战斗机绕行行动"
@@ -4064,11 +4064,11 @@
  bad_weather_flight_training: "恶劣天气飞行训练"
  bad_weather_flight_training_desc: "在各种天气条件下飞行的训练意味着我们的飞行员将能够运输部队和物资，无论他们处于什么天气。"
  cls_by_doctrine: "战斗中救护学说"
- cls_by_doctrine_desc: "通过确保我们部队中的每一位士兵都接受战斗中救护培训，我们是否能够立即为任何受伤士兵提供紧急医疗护理，从而减少总体伤亡人数。"
+ cls_by_doctrine_desc: "通过确保我们部队中的每一位士兵都接受过战斗中救护培训，我们就能立即为任何受伤士兵提供紧急医疗护理，从而减少总体伤亡。"
  night_combat_insertions: "夜间战斗穿插"
  night_combat_insertions_desc: "利用夜间的优势，我们可以在敌方能见度最低的时候进行快速行动。"
  rapid_battery_emplacement: "快速火炮部署"
- rapid_battery_emplacement_desc: "通过训练炮兵快速就位的训练，我们将能够快速建立火力基地，为我们的其他部队提供适当的火力支援。"
+ rapid_battery_emplacement_desc: "通过训练炮兵能够快速安置枪支，我们将能够快速建立火力基地，为其他部队提供适当的火力支援。"
  dedicated_spotter_teams: "专业侦查团队"
  dedicated_spotter_teams_desc: "我们所有的营都将配备炮兵和空中侦察小队，其唯一目的是发现敌方高价值目标并向其开火。"
  maintaining_momentum: "机动力保持"
@@ -4623,8 +4623,6 @@
  tank_escorts_desc: "通过提高速度、机动性和火力，我们的步兵战车将能够跟上我们的主战坦克，并为它们提供针对敌方步兵的近距离保护。"
  upgunned_ifvs: "炮火升级的步兵战车"
  upgunned_ifvs_desc: "通过升级我们的步兵战车的武器口径，并让它们使用更好的枪支和弹药，我们可以让步兵战车变得更加致命。"
- Cat_Western: "西方战斗学说"
- Cat_Eastern: "东方战斗学说"
  CAT_ai: "人工智能技术"
  CAT_nfibers: "纳米纤维技术"
  CAT_naval_reactors: "海军核反应堆"
@@ -4790,3 +4788,5 @@
  integrated_close_air_desc: "通过将攻击直升机连队分配给我们的作战部队，我们可以确保每个部队都有能力随时呼叫火力支援。"
  multi_weapon_pylons_desc: "通过确保我们的武装直升机能够装备多种武器，我们可以最大限度地提高它们攻击任何指定目标的能力。"
  eye_in_the_sky_desc: "我们的武装直升机机组人员不仅接受过进攻训练，还接受过侦察训练，他们将在任何袭击之前收集有价值的情报。"
+ CAT_western: "西方战斗学说"
+ CAT_eastern: "东方战斗学说"
