--- a/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
@@ -1418,7 +1418,7 @@
  BLR_Europe_last_dictator: "Último Ditador da Europa"
  BLR_kal_with: "CJSC \"Companhia de Potássio Bielorrussa\""
  BLR_kal_without: "JSC \"Companhia de Potássio Bielorrussa\""
- BLR_BRSM: "BRSM"
+ BLR_BRSM: "União da Juventude Republicana Bielorrussa"
  BLR_Poles_goes: "Poloneses Deixando Belarus"
  BLR_Internet_Cencorship: "Censura na Internet"
  BLR_National_Security_Service: "Serviço de Segurança Nacional"
@@ -2336,5 +2336,5 @@
  ARM_armenia_ready_union_state: "§Y[?ARM.union_state|-0]§!"
  ARM_armenia_readys_union_state: "§YPorcentagem§! de prontidão de §Y[ARM.GetNameWithFlag]§! para integrar-se ao §YEstado da União§!"
  ARM_armenia_notreadys_union_state: "§RINDISPONÍVEL§!"
- BLR_constitution_BSSR: "The Constitution Of BSSR"
- BLR_constitution_BSSR_desc: "To begin with, it is necessary to restore the Constitution of the BSSR"
+ BLR_constitution_BSSR: "A Constituição do RSS da Bielorrússia"
+ BLR_constitution_BSSR_desc: "Para começar, é necessário restaurar a Constituição da RSS da Bielorrússia"
