--- a/localisation/braz_por/MD_focus_EGY_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_EGY_l_braz_por.yml
@@ -38,7 +38,7 @@
  Egypt.6.a: "Aff."
  Egypt.7.t: "Os EUA Concordaram em Investir em Nós!"
  Egypt.7.d: "Eles concordaram em investir em nossa indústria e cobrir todas as despesas de construção. No entanto, isso aumentará sua influência sobre nós."
- Egypt.7.a: "Thanks"
+ Egypt.7.a: "Obrigado"
  EGY_interv_tt: "Agora seremos capazes de enviar voluntários para conflitos estrangeiros!"
  EGY_finish_syr_tur_neg: "Finalizando as Negociações Sírio-Turcas"
  EGY_finish_syr_tur_neg_desc: "O Egito tem atuado há muito tempo como negociador e mediador entre a normalização das relações sírio-turcas. Chegou a hora de finalizar as negociações."
@@ -913,8 +913,8 @@
  egypt.125.a: "Droga"
  EGY_buy_m777: "Compra de M109A5"
  EGY_buy_m777_desc: "Unidade de artilharia autopropulsada americana M109A5, uma classe de obuseiros autopropulsados. Precisamos deles para fortalecer nosso exército terrestre."
- EGY_buy_arms: "§YCompra de Armas§!"
- EGY_buy_arms_desc: "Nossos diplomatas precisam se esforçar mais para concordar com acordos de armas."
+ EGY_buy_arms: "§YCompra de armas§!"
+ EGY_buy_arms_desc: "Os nossos diplomatas precisam de se esforçar mais para chegar a acordo sobre acordos de armas com nações estrangeiras, especialmente os principais fornecedores."
  EGY_arms_purch_idea: "Esforços Diplomáticos"
  egypt.129.t: "Negócio de Armas Egípcias"
  egypt.129.d: "O exército egípcio quer comprar nossos tanques M1A2, devemos vendê-los para eles?"
