--- a/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
@@ -1003,7 +1003,7 @@
  LBA_wmds_desc: "Since the start of the Libyan nuclear program in the 1970s, most of the knowledge and material sourcing has been handled by Friedrich Tinner, a Swiss nuclear engineer. He still heads our nuclear program and we should use his connections to start building centrifuges for nuclear enrichment."
  LBA_start_building_reactor_desc: "In 1979, the Soviet Union built a research reactor at Tajoura under IAEA supervision. This however, is not fit for our centrifuges and for nuclear weapons production. We need to build a proper nuclear reactor for uranium production."
  LBA_start_building_reactor_tt: "§RIf any country is crazy enough to start attacking countries with possible WMDs, we might be a target for them!§!"
- LBA_start_building_reactor: "[LBA.GetAdjective] Nuclear Program"
+ LBA_start_building_reactor: "Start Building A Reactor"
  LBA_arms_smuggling: "Smuggle Weapons"
  LBA_arms_smuggling_desc: "Due to the international sanctions, we can't really purchase weapons legally. However, we still have a few channels where we can bring more weapons for our troops."
  LBA_buy_nukes: "Buy Nukes"
@@ -2274,3 +2274,4 @@
  LibyaFocus.104.d: "With our security forces occupied elsewhere, the deserts of the [580.GetName] are basically unpatrolled. Taking advantage of this power vacuum, [FROM.GetNameDef] has sent a small contingent of troops to set up a small base in the town of Aozou. With the [FROM.GetAdjective] flying in the center of Aouzou town, [FROM.GetNameDef] has claimed the entire area for themselves."
  LibyaFocus.104.a: "There is nothing we can do"
  LibyaFocus.104.b: "They will pay for this!"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective] Nuclear Program"
