--- a/localisation/braz_por/MD_techs_l_braz_por.yml
+++ b/localisation/braz_por/MD_techs_l_braz_por.yml
@@ -2249,8 +2249,6 @@
  CAT_lha: "Navios de Assalto Anfíbio (LHA)"
  CAT_lpd: "Navios de Transporte Anfíbio (LPD)"
  CAT_internet_tech: "Toda Tecnologia da Internet"
- Cat_Western: "Doutrina de Combate Ocidental"
- Cat_Eastern: "Doutrina de Combate Oriental"
  CAT_offensive_doctrine: "Doutrina Ofensiva"
  CAT_defensive_doctrine: "Doutrina Defensiva"
  CAT_unconventional: "Guerra Não Convencional"
@@ -2643,17 +2641,17 @@
  amphibious_warfare_experts: "Especialistas em Guerra Anfíbia"
  amphibious_warfare_experts_desc: "Ao treinar continuamente em técnicas de desembarque e travessias de rios, nossas forças marítimas se tornarão os principais especialistas em operações militares anfíbias."
  thunder_runs: "Corridas do Trovão"
- thunder_runs_desc: "Com o objetivo de semear o caos e infligir danos ao inimigo, nossas forças blindadas serão treinadas para realizar ataques rápidos em território inimigo, mesmo sem forças de apoio logo atrás."
+ thunder_runs_desc: "Com o objetivo de semear o caos e causar danos ao inimigo, nossas forças blindadas serão treinadas para conduzir ataques rápidos em profundidade no território inimigo, mesmo sem forças de acompanhamento logo atrás deles."
  shore_directed_fires: "Fogos Direcionados à Costa"
- shore_directed_fires_desc: "Utilizando observadores altamente treinados, os fuzileiros na praia serão capazes de direcionar precisamente onde o suporte de fogo naval é utilizado."
+ shore_directed_fires_desc: "Utilizando observadores altamente treinados, os fuzileiros navais na praia serão capazes de direcionar com precisão onde o apoio de fogo naval será utilizado."
  dedicated_breaching_parties: "Partes de Rompimento Dedicadas"
  dedicated_breaching_parties_desc: "Com treinamento em destruir fortificações inimigas, essas forças serão treinadas para romper obstáculos inimigos com facilidade durante operações de combate."
  logistical_experts: "Especialistas Logísticos"
- logistical_experts_desc: "Com a quantidade de pessoal e equipamento que precisamos mover, nossas companhias de suporte e suprimento se tornarão especialistas em mover homens e materiais até o ponto de contato com atraso mínimo."
+ logistical_experts_desc: "Com a quantidade de pessoal e equipamento que precisamos de transportar, as nossas empresas de apoio e fornecimento de forças tornar-se-ão especialistas em transportar homens e materiais para o ponto de contacto com o mínimo de atraso."
  rapid_mission_planning: "Planejamento de Missão Rápida"
  rapid_mission_planning_desc: "Para explorar rapidamente aberturas e oportunidades, nossas forças praticarão planejamento e execução rápidos de missões de combate conforme necessário."
  infantry_amphibious_strike_forces: "Forças de Ataque Anfíbio da Infantaria"
- infantry_amphibious_strike_forces_desc: "Dependendo principalmente de forças de infantaria leve altamente treinadas, nossos fuzileiros se tornarão especialistas em atacar e destruir alvos inimigos-chave durante operações anfíbias."
+ infantry_amphibious_strike_forces_desc: "Contando principalmente com forças de infantaria ligeira altamente treinadas, os nossos fuzileiros navais tornar-se-ão especialistas em atacar e destruir alvos inimigos importantes durante operações anfíbias."
  the_few_the_proud: "Os Poucos, Os Orgulhosos"
  the_few_the_proud_desc: "Nossa infantaria naval será uma força de elite, poucos em número, mas altamente habilidosos e capazes como uma força de desembarque."
  one_if_by_land: "Um Se Por Terra"
@@ -2739,7 +2737,7 @@
  dispersed_jtac_teams: "Equipes de JTAC Dispersas"
  dispersed_jtac_teams_desc: "Ao dispersar nossas equipes de JTAC entre unidades de linha, poderemos ajudar essas unidades com fogo quando elas mais precisarem, em vez de depender de um pedido do nível de comando."
  forward_staged_supply_lines: "Linhas de Suprimento Avançadas Estagiadas"
- forward_staged_supply_lines_desc: "Ao posicionar suprimentos e reposições para frente em direção ao front, podemos minimizar o tempo de resposta para pedidos de suprimento e reforço, acelerando a mobilidade de nossas forças."
+ forward_staged_supply_lines_desc: "Ao padronizar os suprimentos e as substituições em direção à frente, podemos minimizar o tempo de resposta nas solicitações de suprimentos e reforços, acelerando a mobilidade de nossas forças."
  helicopter_gunship_interdiction: "Interdição por Helicóptero de Ataque"
  helicopter_gunship_interdiction_desc: "Utilizando nossos helicópteros de ataque, podemos atacar rapidamente as forças inimigas que tentam se movimentar passando ou perto de nós."
  prioritized_gunship_crews: "Tripulações de Helicópteros de Ataque Priorizadas"
@@ -2787,7 +2785,7 @@
  critical_care_medevac: "MEDEVAC de Cuidados Críticos"
  critical_care_medevac_desc: "Para garantir que nossos feridos sobrevivam, todo o pessoal MEDEVAC de nossas forças aeromóveis será composto por paramédicos e enfermeiros de cuidados críticos, aumentando as chances de sobrevivência de nosso pessoal para lutar outro dia."
  airmobile_leadership_courses: "Cursos de Liderança Aeromóvel"
- airmobile_leadership_courses_desc: "Para melhor ensinar nossa liderança a operar neste ambiente, cursos especializados de liderança aeromóvel serão estabelecidos para ensinar os detalhes dessas operações."
+ airmobile_leadership_courses_desc: "Para melhor ensinar a nossa liderança como operar neste ambiente, serão criados cursos especializados de liderança aeromóvel para ensinar os meandros destas operações."
  combat_resupply_flights: "Voos de Ressuprimento em Combate"
  combat_resupply_flights_desc: "Independentemente dos riscos, nossos pilotos logísticos aeromóveis poderão realizar voos na zona de combate para manter nossos soldados supridos de munição e equipamentos."
  expanded_light_fighter_bypass_operations: "Operações Ampliadas de Contorno com Combatentes Leves"
@@ -2795,11 +2793,11 @@
  bad_weather_flight_training: "Treinamento de Voo em Condições Climáticas Adversas"
  bad_weather_flight_training_desc: "O treinamento para voar em todas as condições climáticas significará que nossos pilotos poderão transportar tropas e suprimentos, não importa o tempo em que se encontrarem."
  cls_by_doctrine: "CLS por Doutrina"
- cls_by_doctrine_desc: "Ao garantir que cada soldado em nossa força seja treinado em CLS, poderemos fornecer cuidados médicos de emergência a qualquer soldado ferido imediatamente, reduzindo o número total de baixas."
+ cls_by_doctrine_desc: "Ao garantir que cada soldado que temos na nossa força seja treinado em CLS, seremos capazes de fornecer cuidados médicos de emergência a qualquer soldado ferido imediatamente, reduzindo o número total de vítimas."
  night_combat_insertions: "Inserções de Combate Noturno"
  night_combat_insertions_desc: "Ao aproveitar a noite, podemos realizar operações rápidas quando o inimigo tem a menor visibilidade."
  rapid_battery_emplacement: "Emplacamento Rápido de Bateria"
- rapid_battery_emplacement_desc: "Com tripulações de artilharia treinadas para emplacar rapidamente seus canhões, poderemos estabelecer rapidamente bases de fogo para fornecer suporte adequado às nossas outras unidades."
+ rapid_battery_emplacement_desc: "Com tripulações de artilharia treinadas para posicionar rapidamente seus canhões, seremos capazes de estabelecer rapidamente bases de fogo para permitir o apoio de fogo adequado para nossas outras unidades."
  dedicated_spotter_teams: "Equipes de Observadores Dedicados"
  dedicated_spotter_teams_desc: "Equipes de observadores de artilharia e aviação serão incorporadas a todos os nossos batalhões, com o único propósito de localizar e direcionar o fogo para alvos inimigos de alto valor."
  maintaining_momentum: "Mantendo o Momentum"
@@ -4790,3 +4788,5 @@
  GER_RODS1: "Hastes de Deus"
  GER_RODS2: "Hastes de Tungstênio"
  GER_RODS3: "Hastes de Urânio"
+ CAT_western: "Doutrina de Combate Ocidental"
+ CAT_eastern: "Doutrina de Combate Oriental"
