--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -686,7 +686,7 @@
  BLR_Kal_desc: "We will propose to Russia to create a joint joint stock company that will be our common Potassium trader."
  BLR_Kal2: "Close A Joint Trader With Potassium"
  BLR_Kal2_desc: "Recent criminal cases initiated by us against employees of the Russian URALKALI, as well as abuse of authority on their part, forced us to close a joint trader and create our own."
- BLR_BRSM_desc: "The Belarusian Republican Youth Union is a youth public association in the Republic of Belarus. It is the largest youth association in the country and is supported by Alexander Lukashenko. Its activities are funded by the state."
+ BLR_BRSM_desc: "L'Union républicaine de la jeunesse biélorusse est une association publique de jeunesse de la République de Biélorussie. Il s'agit de la plus grande association de jeunesse du pays et elle est soutenue par Alexandre Loukachenko. Ses activités sont financées par l'État."
  BLR_Potato_Empire: "Potato Empire"
  BLR_Potato_Empire_desc: "We are one of the top potato experts in the world. Our country should be proud of this"
  BLR_Factory_Kommunarka: "Nationalize the Kommunarka Factory"
@@ -1400,7 +1400,7 @@
  BLR_Europe_last_dictator: "Europe Last Dictator"
  BLR_kal_with: "CJSC\"Belarusian Potash Company\""
  BLR_kal_without: "JSC \"Belarusian Potash Company\""
- BLR_BRSM: "BRSM"
+ BLR_BRSM: "Union de la jeunesse républicaine biélorusse"
  BLR_Poles_goes: "Poles Leaving Belarus"
  BLR_Internet_Cencorship: "Internet Censorship"
  BLR_National_Security_Service: "Belarusian Bureau of Investigation"
