--- a/localisation/french/MD_missiles_l_french.yml
+++ b/localisation/french/MD_missiles_l_french.yml
@@ -1,12 +1,12 @@
 ﻿l_french:
  missile_type_0: "Aucun"
- missile_type_1: "ICBM"
- missile_type_2: "IRBM"
- missile_type_3: "SLBM"
- missile_type_4: "ALCM"
- missile_type_5: "GLCM"
- missile_type_6: "SLCM"
- missile_type_7: "HSCM"
+ missile_type_1: "MB-I"
+ missile_type_2: "MB-PI"
+ missile_type_3: "MSBS"
+ missile_type_4: "MC"
+ missile_type_5: "MC-Sol"
+ missile_type_6: "MC-Mer/Sol"
+ missile_type_7: "MCH"
  missile_tech_0: "Aucun"
  missile_tech_1: "1965"
  missile_tech_2: "1975"
@@ -217,14 +217,14 @@
  spy_sat_mission_decision_desc: "Placer un §Ysatellite espion§! sur une orbite géostationnaire au-dessus de chaque région §Y[FROM.GetNameWithFlag]§!"
  spy_sat_mission_trigger_TT: "£GFX_SPY_satellite_texticon   disponibles ([?var_SPY_mission_num_available|C0]) > §Y[FROM.GetNameWithFlag]§! nombre d'§YÉtats contrôlés§!([?FROM.num_controlled_states|Y0])"
  Test_selected_TAG_loc_key: "[?temp1]"
- get_missiles: "Get Missiles"
- get_SAM_ABM: "Get SAM & ABM"
- get_OLV: "Get OLV"
- get_nukes: "Get Nukes"
- get_satellites: "Get Satellites"
- get_missile_tech: "Get Missile Technologies"
- missile_construction_1: "ICBM Production"
- missile_construction_1_desc: "Ongoing §YICBM§! production"
+ get_missiles: "Obtenir des missiles"
+ get_SAM_ABM: "Obtenir des M-Sol/Air & MAB-Sol/Air"
+ get_OLV: "Obtenir des lanceurs"
+ get_nukes: "Obtenir des armes nucléaires"
+ get_satellites: "Obtenir des satellites"
+ get_missile_tech: "Obtenir les technologies de missiles"
+ missile_construction_1: "Production de MB-I"
+ missile_construction_1_desc: "Production de §Ymissiles balistiques intercontinentaux (MB-I)§! en cours."
  missile_construction_2: "IRBM Production"
  missile_construction_2_desc: "Ongoing §YIRBM§! production"
  missile_construction_3: "SLBM Production"
@@ -258,7 +258,7 @@
  complete_nuclear_program: "Complete Nuclear Program"
  complete_nuclear_program_desc: "We have constructed a nuclear warhead and can now complete our secret nuclear programm to become a §Y$nuclear_status_6_loc_key$§! or a full §Y$nuclear_status_3_loc_key$§!."
  complete_nuclear_program_trigger_TT: "§Y[ROOT.GetNameWithFlag]§! a un §Y$nuclear_status_7_loc_key$§! et au moins §Oune ogive nucléaire§! produite et dans son inventaire."
- missile_prod_1_dynamic_modifier: "ICBM Production"
+ missile_prod_1_dynamic_modifier: "Production de MB-I"
  missile_prod_2_dynamic_modifier: "IRBM Production"
  missile_prod_3_dynamic_modifier: "SLBM Production"
  missile_prod_4_dynamic_modifier: "ALCM Production"
