--- a/localisation/polish/MD_focus_BLR_l_polish.yml
+++ b/localisation/polish/MD_focus_BLR_l_polish.yml
@@ -1418,7 +1418,7 @@
  BLR_Europe_last_dictator: "Europa Ostatni dyktator"
  BLR_kal_with: "CJSC „Białoruska Kompania Potasowa”"
  BLR_kal_without: "SA „Białoruska Kompania Potasowa”"
- BLR_BRSM: "BRSM"
+ BLR_BRSM: "Białoruski Republikański Związek Młodzieży"
  BLR_Poles_goes: "Polacy opuszczający Białoruś"
  BLR_Internet_Cencorship: "Cenzura internetowa"
  BLR_National_Security_Service: "Służba Bezpieczeństwa Narodowego"
