--- a/localisation/polish/MD_focus_DEN_l_polish.yml
+++ b/localisation/polish/MD_focus_DEN_l_polish.yml
@@ -590,7 +590,7 @@
  DEN_kingdom_rise_desc: "Poparcie społeczne dla powrotu do monarchii szybko rośnie, społeczeństwo zdało sobie sprawę, że ci „karierowi” politycy idą tylko po wypłatę i smarują sobie dłonie"
  DEN_crown_prince: "Książę koronny"
  DEN_crown_prince_desc: "Frederik André Henrik Christian jest księciem koronnym Danii i bardzo lubianą osobą publiczną, w wieku 18 lat zaciągnął się do „Den kongelige livgarde”, a 9 lat później przez całe życie ukończył duńskie szkolenie sił specjalnych, aby zostać płetwonurkiem zainwestował czas w duńskich siłach zbrojnych"
- DEN_grundloven: "Den Danske Grundlov"
+ DEN_grundloven: "Konstytucja Danii"
  DEN_grundloven_desc: "Teraz, gdy królowa ponownie objęła władzę, musimy dokonać zmian, aby pozostała przy władzy"
  DEN_militarization: "Zwiększony budżet armii"
  DEN_militarization_desc: "Kiedy królowa znów jest u władzy, musimy umocnić nasze rządy, zawsze mieliśmy „Livgarden”, teraz musimy mieć pewność, że wspiera nas cała armia"
@@ -1014,7 +1014,7 @@
  denmark_agrar_event.10.a: "jak zwykle narzekają"
  denmark_agrar_event.11.t: "Protesty aktywistów ekologicznych"
  denmark_agrar_event.11.d: "Dołącz do nas podczas Rajdu Zielonej Ziemi – pokojowego i wpływowego protestu mającego na celu podniesienie świadomości na temat pilnej potrzeby działań klimatycznych. To przyjazne rodzinom wydarzenie zaprasza osoby w każdym wieku i ze wszystkich środowisk do wspólnego działania na rzecz zrównoważonej przyszłości."
- denmark_agrar_event.11.a: "Spasser?"
+ denmark_agrar_event.11.a: "Idiota?"
  denmark_agrar_event.12.t: "Protesty aktywistów ekologicznych"
  denmark_agrar_event.12.d: "Dołącz do nas podczas Marszu Sprawiedliwości Klimatycznej – dynamicznego i wpływowego protestu, którego celem jest żądanie pilnych działań na rzecz sprawiedliwości klimatycznej. Wydarzenie to ma na celu wygłoszenie zdecydowanego oświadczenia, zachowując jednocześnie szacunek i brak przemocy, zapewniając platformę dla pełnych pasji osób do wyrażenia swoich obaw i nalegania na znaczące zmiany."
  denmark_agrar_event.12.a: "może to prowadzić do problemów"
@@ -1035,10 +1035,10 @@
  denmark_agrar_event.17.a: "Może to prowadzić do poważnych problemów"
  denmark_agrar_event.18.t: "Rolnicy protestują"
  denmark_agrar_event.18.d: "Rolnicy będą maszerować ulicami, używając traktorów i innego sprzętu rolniczego do blokowania głównych dróg i skrzyżowań, zakłócając ruch, aby zwrócić uwagę na ich trudną sytuację. Ta demonstracja solidarności i frustracji ma na celu pokazanie krytycznego stanu przemysłu rolnego."
- denmark_agrar_event.18.a: "Lortesæks"
+ denmark_agrar_event.18.a: "Gówno"
  denmark_agrar_event.19.t: "Rolnicy protestują"
  denmark_agrar_event.19.d: "Dołącz do nas podczas buntu rolników, wysoce naładowanego i konfrontacyjnego protestu organizowanego przez rolników oburzonych nieuczciwą polityką, niezrównoważonymi praktykami i brakiem wsparcia ze strony rządu. Ten protest jest ostatecznością i ma na celu zdecydowane żądanie natychmiastowych i znaczących działań w celu rozwiązania krytycznych problemów stojących przed społecznością rolniczą."
- denmark_agrar_event.19.a: "sådanne røvhuller"
+ denmark_agrar_event.19.a: "takie gnojki"
  denmark.22.t: "Øresunds Broen"
  denmark.22.d: "Budowę rozpoczęto w 1995 r., aby połączyć wyspę Sjælland ze Skåne, a jej celem było ułatwienie handlu z resztą Europy iz północy. Zarówno Dania, jak i Szwecja podpisały Układ z Schengen, który zniósł kontrolę graniczną i paszportową między krajami"
  denmark.22.a: "Skåne jest duńskie!"
@@ -1177,7 +1177,7 @@
  DEN_idea_streamline_infantry_production_desc: "Usprawnienie naszego wyposażenia piechoty pozwoli nam lepiej przygotować nasze wojsko na ewentualne konflikty, w których możemy wziąć udział."
  DEN_idea_streamline_naval_production: "Usprawnienie produkcji morskiej"
  DEN_idea_streamline_naval_production_desc: "Dania wdraża reformy mające na celu usprawnienie produkcji okrętów wojennych, zwiększenie wydajności i zmniejszenie kosztów budowy okrętów wojennych, a także wzmocnienie zdolności obrony morskiej."
- DEN_idea_FAUK: "Forsvarets Auditørkorps"
+ DEN_idea_FAUK: "Korpus Sędziego Adwokata Generalnego"
  DEN_idea_FAUK_desc: "Forsvarets Auditørkorps, duńska prokuratura wojskowa, przechodzi reformy mające na celu poprawę rozliczalności i przejrzystości w siłach zbrojnych. Zmiany te mają na celu wzmocnienie wymiaru sprawiedliwości wojskowej i utrzymanie praworządności, zapewniając personelowi wojskowemu sprawiedliwe i bezstronne postępowanie prawne."
  DEN_intensify_the_flexicurity_idea: "Zintensyfikuj Flexicurity"
  DEN_intensify_the_flexicurity_idea_desc: "Dania intensyfikuje swój model flexicurity, łącząc elastyczność rynku pracy ze środkami zabezpieczenia społecznego w celu promowania stabilności zatrudnienia i odporności gospodarczej."
@@ -1305,7 +1305,7 @@
  DEN_Idea_heavy_Force_desc: "Dania wzmacnia swój potencjał w zakresie sił ciężkich, inwestując w pojazdy opancerzone, artylerię i piechotę zmechanizowaną, aby zwiększyć siłę ognia i dominację na polu bitwy"
  DEN_Idea_VFK: "VFK"
  DEN_Idea_VFK_desc: "Duńskie Siły Zbrojne (VFK) podjęły kompleksowy program modernizacji, wzmacniając swoje możliwości poprzez zaawansowane technologie, ulepszone szkolenia i strategiczną restrukturyzację, aby zapewnić gotowość i skuteczność w zapewnianiu bezpieczeństwa narodowego."
- DEN_idea_Privatisation_Post: "Postnord"
+ DEN_idea_Privatisation_Post: "PostNord"
  DEN_idea_Privatisation_Post_desc: "Duński dostawca usług pocztowych modernizuje swoją działalność i rozszerza swoje usługi, aby sprostać zmieniającym się potrzebom klientów w epoce cyfrowej."
  DEN_idea_den_education_reform1: "Reformy edukacji"
  DEN_idea_den_education_reform1_desc: "Dania wdraża kompleksowe reformy edukacji w celu poprawy jakości, równości i innowacyjności w systemie edukacji, przygotowując uczniów do osiągnięcia sukcesu w szybko rozwijającym się świecie."
@@ -1584,7 +1584,7 @@
  DEN_religious_schools_desc: "Szkoły religijne w Danii zapewniają edukację opartą na określonych tradycjach wiary, oferując poradnictwo duchowe i moralne wraz z nauczaniem akademickim. Szanując różnorodność religijną i wolność sumienia, szkoły te odgrywają rolę w przekazywaniu dziedzictwa kulturowego, wartości i tradycji przyszłym pokoleniom."
  DEN_health_sector: "Sektor zdrowia"
  DEN_health_sector_desc: "Duński sektor zdrowia stawia na pierwszym miejscu dobro swoich obywateli, zapewniając kompleksowe usługi opieki zdrowotnej dostępne dla wszystkich. Koncentrując się na opiece profilaktycznej, usługach skoncentrowanych na pacjencie i medycynie opartej na dowodach, duński system opieki zdrowotnej promuje równość, efektywność i wysokiej jakości wyniki opieki zdrowotnej dla jednostek i społeczności."
- DEN_electronic_health_records: "Sundhedskortets"
+ DEN_electronic_health_records: "Dokumentacja Medyczna"
  DEN_electronic_health_records_desc: "System Sundhedskortets w Danii zapewnia powszechny dostęp do świadczeń opieki zdrowotnej poprzez krajową kartę ubezpieczenia zdrowotnego. Ta karta elektroniczna umożliwia obywatelom płynny dostęp do opieki medycznej, recept i leczenia, ułatwiając skuteczne i sprawiedliwe świadczenie opieki zdrowotnej na terenie całego kraju."
  DEN_privatize_healthcare: "Sprywatyzować służbę zdrowia"
  DEN_privatize_healthcare_desc: "Dania rozważa możliwości prywatyzacji niektórych aspektów swojego systemu opieki zdrowotnej poprzez wprowadzenie mechanizmów rynkowych i konkurencji w celu poprawy wydajności i innowacyjności. Wykorzystując wiedzę i zasoby sektora prywatnego, Dania dąży do poprawy świadczenia opieki zdrowotnej przy jednoczesnym zachowaniu standardów powszechnego dostępu i jakości."
@@ -1642,8 +1642,8 @@
  DEN_monthly_population: "Miesięczna populacja"
  DEN_DISA_materiel_manufacturer: "DIZA"
  DEN_Composhield_utility_vehicle_manufacturer: "Composhield"
- DEN_Odense_Staalskibsvaerft: "Odense Staalskibsvaerft"
- DEN_Svendborg_skibsvaerft: "Svendborg Skibsvaerft"
+ DEN_Odense_Staalskibsvaerft: "Stocznia Stalowa w Odense"
+ DEN_Svendborg_skibsvaerft: "Stocznia w Svendborg"
  DEN_Terma_AS_aircraft_manufacturer: "Terma AS"
  DEN_idea_Welfare_State: "Państwo opiekuńcze"
  DEN_idea_Welfare_State_desc: "Państwo opiekuńcze to główna część duńskiego społeczeństwa, której zadaniem jest utrzymanie większości społeczeństwa w klasie średniej."
