--- a/localisation/polish/MD_focus_EGY_l_polish.yml
+++ b/localisation/polish/MD_focus_EGY_l_polish.yml
@@ -914,7 +914,7 @@
  EGY_buy_m777: "Zakup M109A5"
  EGY_buy_m777_desc: "M109A5 Amerykańska jednostka artylerii samobieżnej, klasa haubic samobieżnych. Potrzebujemy ich, aby wzmocnić naszą armię lądową."
  EGY_buy_arms: "§YKupowanie broni§!"
- EGY_buy_arms_desc: "Nasi dyplomaci muszą się bardziej postarać, aby dojść do porozumienia w sprawie umów zbrojeniowych."
+ EGY_buy_arms_desc: "Nasi dyplomaci muszą bardziej się starać, aby uzgodnić umowy zbrojeniowe z obcymi krajami, zwłaszcza z głównymi dostawcami."
  EGY_arms_purch_idea: "Wysiłki dyplomatyczne"
  egypt.129.t: "Umowa zbrojeniowa z Egiptem"
  egypt.129.d: "Egipskie wojsko chce kupić nasze czołgi M1A2, czy mamy im je sprzedać?"
