--- a/localisation/russian/MD_focus_GER_l_russian.yml
+++ b/localisation/russian/MD_focus_GER_l_russian.yml
@@ -10,7 +10,7 @@
  GER_Expand_Volkswagen_Nutzfahrzeuge_desc: "Немецкая марка легких коммерческих автомобилей, принадлежащая концерну Volkswagen Group; штаб-квартира находится в Ганновере, Нижняя Саксония, Германия. Изначально входила в состав подразделения Volkswagen Passenger Cars (бизнес-направление), но с 1995 г. функционирует как самостоятельная марка."
  GER_BMW_Focus: "Bayerische Motoren Werke AG"
  GER_BMW_Focus_desc: "Немецкий транснациональный производитель автомобилей и мотоциклов класса люкс со штаб-квартирой в Мюнхене, Бавария, Германия. Компания была основана в 1916 г. как производитель авиационных двигателей, которые она выпускала с 1917 по 1918 г. и с 1933 по 1945 г."
- GER_BMW_CKD_System: "CKD Stystem"
+ GER_BMW_CKD_System: "Система ЧКД"
  GER_BMW_CKD_System_desc: "Благодаря полной разборке наших автомобилей мы можем перевозить их по всему миру, используя гораздо меньше транспортных мощностей"
  GER_Restructure_Infrastructure: "Инфраструктурные реформы"
  GER_Restructure_Infrastructure_desc: "Разрыв в инфраструктуре Германии и остального мира всё ещё достаточно очевиден, и мы должны значительно улучшить её, если хотим конкурировать в списке лучших европейских стран."
@@ -36,9 +36,9 @@
  GER_Neuer_Markt: "Нойер Маркт"
  GER_Neuer_Markt_desc: "Neuer Markt - это сегмент Deutsche Börse, который был создан в 1997 году для отражения сегмента рынка \"новых технологий\" и предоставления молодым компаниям в перспективных отраслях возможности получения акционерного финансирования путем IPO."
  GER_Home_Grown_IT: "Домашние информационные технологии"
- GER_Home_Grown_IT_desc: "Инвестируя в свои собственные компании, мы перестаем зависеть от иностранных компаний"
- GER_home_Grown_Sozialmedia: "Отечественная социальная медиа"
- GER_home_Grown_Sozialmedia_desc: "Инвестируя в наши собственные компании, мы больше не зависим от иностранных компаний"
+ GER_Home_Grown_IT_desc: "Инвестируя в собственные компании, мы больше не зависим от иностранных компаний."
+ GER_home_Grown_Sozialmedia: "Домашние социальные сети"
+ GER_home_Grown_Sozialmedia_desc: "Инвестируя в собственные компании, мы больше не зависим от иностранных компаний."
  GER_home_Grown_Software: "Отечественное программное обеспечение"
  GER_home_Grown_Software_desc: "Инвестируя в наши компании, мы сможем избавиться от зависимости от иностранных технологических гигантов и больше полагаться на собственные компании!"
  GER_Tech_DAX: "Технологический DAX"
@@ -2144,15 +2144,15 @@
  GER_coalition_center_tooltip: "Choosing this focus will lead to an §Geventual forming of a German centrist coalition§! made out of 2 parties. §YPossible parties are: £GER_non_aligned_greens £GER_western_social_democrat £GER_western_liberal £GER_western_conservative."
  GER_coalition_recht_tooltip: "Choosing this focus will lead to an §Geventual forming of a German right wing coalition§! made out of 2 parties. §YPossible parties are: £GER_western_liberal £GER_western_conservative £GER_nationalist_right_wing_populist."
  has_not_environmentalist_government_or_in_coalition_TT: "Does not have an §GEnvironmentalist / Green Party§! in the government or coalition."
- not_has_emerging_aligned_government_TT: "The ruling government is not §7Emerging Outlook§!"
- not_has_western_aligned_government_TT: "The ruling government is not §2Western Outlook§!"
+ not_has_emerging_aligned_government_TT: "Правящее правительство не является §7Новым мировоззрением§!"
+ not_has_western_aligned_government_TT: "Правящее правительство это не §2Западное обозрение§!"
  GER_nuclear_path_TT: "§YЭтот путь не позволит нам реализовать ни один проект в области §Gвозобновляемой энергетики§! §Yи не позволит нам стать полностью§! §Gзелёной§! §Yстраной в будущем!§!"
  GER_nuclear_path2_TT: "§YПринятие этого фокуса может§! §Rпомешать§! §Yнам сделать определённый выбор фокуса§! §Gзелёных§! §Yи§! §Gвозобновляемой энергетики§! §Yв других частях дерева!§!"
  GER_non_nuclear_path_TT: "§YЭтот путь не позволит нам иметь какую-либо доктрину в области §6ядерной энергетики§! §Yи не позволит нам стать полностью§! §6ядерной§! §Yстраной в будущем!§!"
  GER_non_nuclear_path2_TT: "§YПринятие этого фокуса может§! §Rпомешать§! §Yнам сделать определённый выбор фокуса§! §6ядерной энергетики§! §Yв других частях дерева!§!"
  GER_war_debt_TT: "$§R0.731§! от §Yвоенных репараций§!.\n"
  GER_war_debt_contributions_TT: "§R$0.731§! §Yмиллиардов§! еженедельно отчисляется на §Yвоенные репарации§!."
- GER_state_nuclear_power_plants_tt: "All states have §YLevel 2§! nuclear reactors."
+ GER_state_nuclear_power_plants_tt: "Во всех штатах есть §YУровень 2§! ядерные реакторы."
  GER_russian_relations_harmed_tt: "\n§YЭто может §tповредить§! нашим отношениям с §7[SOV.GetNameWithFlag]§! в будущем.§!"
  GER_usa_relations_harmed_tt: "\n§YЭто может §tповредить§! нашим отношениям с §2[USA.GetNameWithFlag]§! в будущем.§!"
  GER_healthcentres_construction_tt: "Our §YHealthcare Spending§! will §Gdecrease§! once the healthcare centres are constructed."
