--- a/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
@@ -80,7 +80,7 @@
  ABK_modernize_army_desc: "我们不能轻视我们的军队，因为它是我国主权的切实保障。"
  ABK_network_warfare_desc: "以网络为中心的战争，也称为以网络为中心的作战或以网络为中心的战争，是一种军事学说或战争理论，旨在将部分由信息技术实现的信息优势转化为竞争优势。消息灵通的地理分散部队的计算机网络。"
  ABK_decentralized_warfare_desc: "第4代战争（4GW）是以战争于政治、作战人员与平民之间界限模糊为特征的冲突。1980年，包括古典保守主义者威廉·S·林德在内的一组美国分析人士首次使用这个词来描述战争开始回归到分散形式。"
- ABK_president_illness2: "共产回归"
+ ABK_president_illness2: "共产主义回归"
  ABK_president_illness2_desc: "我们将再次挺立在那红旗之下！"
  ABK_china_help: "中国投资"
  ABK_china_help_desc: "我们能够为我们的国家发展吸引到中国投资。"
@@ -96,10 +96,10 @@
  ABK_one_party_desc: "我们的国家不需要十几个政党，一个就够了。"
  ABK_china_invest_tech: "中国投资科技"
  ABK_china_invest_tech_desc: "中国公司准备为我们的技术部门提供资金。"
- ABK_defend_our_home: "让我们带兄弟们回家！"
- ABK_defend_our_home_desc: "我们的国家总是处于险峻威胁之下-让我们保护它吧。"
+ ABK_defend_our_home: "保护我们的家园"
+ ABK_defend_our_home_desc: "我们的国家始终处于危险的威胁之下 - 让我们来保护它"
  ABK_defend_our_home2: "防御设施"
- ABK_defend_our_home2_desc: "我们不仅要鼓动我们的人民，还要做好充分的防御准备。"
+ ABK_defend_our_home2_desc: "我们不仅要激励人民，而且还要做好保卫边防的实际准备。"
  ABK_china_invest_mesta: "中国投资继续"
  ABK_china_invest_mesta_desc: "中国公司看到了之前投资所产生的积极影响，并准备继续本着同样的目的投资。"
  ABK_atheism: "无神论进入千家万户"
@@ -115,7 +115,7 @@
  ABK_fiveka: "第一个五年计划"
  ABK_fiveka_desc: "现在是我们重新实施五年计划的时候了。"
  ABK_free_education: "免费教育"
- ABK_free_education_desc: "每个阿布哈兹人都有权受到教育！"
+ ABK_free_education_desc: "每个阿布哈兹人都应该接受教育，无论他们身在何处！"
  ABK_collectivism: "集体主义"
  ABK_collectivism_desc: "让我们通过集体主义重新团结阿布哈兹人。"
  ABK_sup_work: "支持工人"
@@ -162,7 +162,7 @@
  ABK_abkhazvozvrashenstroy_desc: "该基金将成为阿布哈兹新经济的关键，在它的帮助下，我们将能够为我们的国家吸引来自世界各地的投资"
  ABK_parli_dead: "与议会的协议"
  ABK_parli_dead_desc: "是时候消除这种民主的遗迹了"
- ABK_dictatorship: "我是独裁君主"
+ ABK_dictatorship: "独裁君主"
  ABK_dictatorship_desc: "只有君主的铁腕可以拯救我们的国家"
  ABK_sov_heast: "与俄罗斯的友谊"
  ABK_sov_heast_desc: "我们准备好和这样的俄罗斯做朋友"
