--- a/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
@@ -1003,7 +1003,7 @@
  LBA_wmds_desc: "自20世纪70年代利比亚核计划启动以来，大部分知识和材料采购都由瑞士核工程师弗里德里希·廷纳负责。他仍然领导着我们的核计划，我们应该利用他的人脉开始建造用于核浓缩的离心机。"
  LBA_start_building_reactor_desc: "1979年，苏联在国际原子能机构的监督下在塔朱拉建造了一座研究反应堆。然而，这座反应堆并不适合我们的离心机和核武器生产。我们需要建造一座合适的核反应堆来生产铀。"
  LBA_start_building_reactor_tt: "§R如果任何一个国家疯狂到开始攻击可能拥有大规模杀伤性武器的国家，我们可能就会成为他们的目标！§!"
- LBA_start_building_reactor: "[LBA.GetAdjective]核计划"
+ LBA_start_building_reactor: "开始建造反应堆"
  LBA_arms_smuggling: "走私武器"
  LBA_arms_smuggling_desc: "由于国际制裁，我们无法合法购买武器。不过，我们仍然有一些渠道可以为我们的部队提供更多武器。"
  LBA_buy_nukes: "购买核武器"
@@ -2274,3 +2274,4 @@
  LibyaFocus.104.d: "由于我们的安全部队被派往其他地方，[580.GetName]的沙漠基本上无人巡逻。利用这一权力真空，[FROM.GetNameDef]派遣了一小队部队在奥祖镇建立了一个小基地。随着[FROM.GetAdjective]飞到奥祖镇中心，[FROM.GetNameDef] 已占领了整个地区。"
  LibyaFocus.104.a: "我们无能为力。"
  LibyaFocus.104.b: "他们会为此付出代价"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective]核计划"
